add java epi 10.4

--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -205,3 +205,58 @@ public static List<Integer> sortApproximatelySortedData(Iterator<Integer> sequen
 
 시간 복잡도는 $O(n log k)$이고, 공간 복잡도는 $O(k)$이다.
 
+## 문제 10.4 k개의 가까운 별 찾기
+
+지구가 (0, 0, 0)의 위치에 있는 은하계를 상상해 보자. 별은 점으로 표현하고 거리는 광년(light year)으로 나타낸다고 가정하자. 은하계에는 대략 $10^12$개의 별이 존재하고 별들의 위치가 파일에 저장되어 있다고 하자.
+
+지구와 가장 가까운 별 k개를 찾으려면 어떻게 해야 할까?
+
+> 힌트: n개의 별 중에서 가장 가까운 별 k개를 알고 있다고 가정하자. 만약 n + 1번 째 별이 가까운 k개의 별 집합에 추가되었을 때 어떤 원소를 빼내야 할까?
+
+만약 램(RAM)의 크기에 제한이 없다면 모든 자료를 배열에 넣은 다음, 정렬을 해서 k개의 원소를 찾으면 된다. 혹은 문제 11.8의 해법을 사용해서 k번째 작은 원소를 찾은 뒤, 간단하게 k개의 작은 원소를 찾으면 된다. 두 경우 모두 $O(n)$의 공간 복잡도를 사용하며, 데이터의 개수가 굉장히 많은 경우에는 램에 모두 저장할 수 없다는 문제가 있다.
+
+직관적으로 생각해 보면 지구와 가까이 위치한 별에만 집중하면 된다. 즉, 별의 위치에 따라 반복적으로 후보 집합을 갱신하고, 필요한 후보 집합을 유지하면 된다. 여기서 후보 집합이란 지금까지의 별들 중에서 가장 가까운 별 k개를 의미한다. 새로운 별이 입력으로 들어왔을 때 이 별을 후보 집합에 넣어도 되는지 확인한다. 이 작업은 후보 집합에 있는 별 중에서 지구와 가장 멀리 떨어진 별과 비교해 보면 된다. 이 별을 찾기 위해선 효과적으로 최고값을 찾을 수 있고, 새로운 원소를 삽입할 수 있는 자료구조가 필요하다.
+
+이 애플리케이션에 완벽한 자료구조는 최대힙이다. 먼저 첫 k개의 별을 최대힙에 삽입한다. 그 뒤 새로운 별을 하나씩 살펴보면서, 최대힙에 들어 있는 별 중에서 가장 거리가 먼 별보다 현재 별의 거리가 더 가깝다면 최대힙에서 원소를 하나 제거하고 새로운 원소를 삽입한다. 만약 그렇지 않다면 다음 별로 넘어간다. 아래의 코드는 각각의 별을 최대힙에 추가한 뒤에 k + 1번째 원소가 삽입된 순간부터 원소를 하나씩 제거했다.
+
+```java
+public static class Star implements Comparable<Star> {
+    private double x, y, z;
+
+    public Star(double x, double y, double z) {
+        this.x = x;
+        this.y = y;
+        this.z = z;
+    }
+
+    public double distance() { return Math.sqrt(x * x + y * y + z * z); }
+
+    @Override
+    public int compareTo(Star rhs) {
+        return Double.compare(this.distance(), rhs.distance());
+    }
+}
+
+public static List<Star> findCloserKStars(Iterator<Star> stars, int k) {
+    // 현재까지 중에서 가장 가까운 별 k개를 저장할 maxHeap
+    PriorityQueue<Star> maxHeap = new PriorityQueue<>(k, Collections.reserveOrder());
+    while (stars.hasNext()) {
+        // 각각의 별을 최대힙에 추가한다. 만약 최대힙의 크기가 k보다 커진다면,
+        // 최대힙에서 최대 원소를 삭제한다.
+        Star star = stars.next();
+        maxHeap.add(star);
+        if (maxHeap.size() == k + 1) {
+            maxHeap.remove();
+        }
+    }
+
+    List<Star> orderedStars = new ArrayList<Star>(maxHeap);
+    // PriorityQueue는 최대 원소가 가장 앞에 온다는 사실을 보장해 줄 뿐
+    // 나머지 원소들의 순서는 보장이 안 되므로, orderedStars를 정렬한다.
+    Collections.sort(orderedStars);
+    return orderedStars;
+}
+```
+
+시간 복잡도는 $O(n log k)$이고, 공간 복잡도는 $O(k)$이다.
+
