--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -256,6 +256,13 @@ public static List<Star> findCloserKStars(Iterator<Star> stars, int k) {
     Collections.sort(orderedStars);
     return orderedStars;
 }
+
+/*
+가장 가까운 k개를 찾는다고 단순히 최소힙을 쓸 수가 없다.
+n개를 모두 공간에 넣을 수 없는 경우가 있을뿐더러
+구해야하는 최소값외의 값들(k-1개의 나머지 최소값들)을 구할 수 없다.
+그래서 최대힙(Collections.reverseOrder() 파라미터로 값들을 역으로 입력함)으로 k개를 구한다.
+*/
 ```
 
 시간 복잡도는 $O(n log k)$이고, 공간 복잡도는 $O(k)$이다.
