--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -267,3 +267,60 @@ n개를 모두 공간에 넣을 수 없는 경우가 있을뿐더러
 
 시간 복잡도는 $O(n log k)$이고, 공간 복잡도는 $O(k)$이다.
 
+## 문제 10.5 실시간으로 주어진 데이터의 중앙값 찾기
+
+어떤 시퀀스가 스트리밍으로 들어오는데 실시간으로 중앙값을 계산하려고 한다. 스트리밍이므로 이전 값을 어딘가에 저장해 놓고 읽을 수 없다. 따라서 새로운 원소를 읽을 때마다 중앙값을 출력해야 한다. 예를 들어 입력이 1, 0, 3, 5, 2, 0, 1이라면 출력은 1, 0.5, 1, 2, 2, 1.5, 1이 된다.
+
+어떤 시퀀스의 중앙값을 실시간으로 찾아주는 알고리즘을 설계해 보라.
+
+> 힌트: 새로운 값을 읽었을 때 이전의 모든 값은 읽지 않아도 된다.
+
+무식한 방법은 문제 11.8의 해법과 같다. 현재까지의 모든 원소들을 배열에 저장한 뒤 k번째 원소를 찾는 방법으로 중앙값을 계산하면 된다. n개의 원소가 스트리밍으로 주어진다면 이 방법의 시간 복잡도는 $O(n^2)$이 된다.
+
+이 방법은 계산해 둔 값을 재사용하지 않고 매번 다시 계산하는 단점이 있다. 어떤 집단의 중앙값은 이 집단을 두 개의 동일한 부분 집단으로 나눈다. 즉, 중앙값보다 작은 집단과 중앙값과 같거나 큰 집단으로 나눈다. 여기에 새로운 원소가 들어오면, 부분 집단 입자에서는 최대 하나의 원소만 바뀐다. 또한 어떤 부분 집단에서 다른 부분 집단으로 원소를 옮겨야 할 수도 있다. 작은 부분 집단에서 가장 큰 원소이거나 큰 부분 집단에서 가장 작은 원소를 옮기게 된다.
+
+여기서 작은 부분 집단을 위한 최대힙과 큰 부분 집단을 위한 최소힙, 이렇게 두 개의 힙을 사용할 것이다. 그리고 이 둘의 크기가 균형이 맞도록 유지할 것이다. 최대힙은 작은 부분 집단에서 가장 큰 원소를 효과적으로 빼낼 수 있다는 장점이 있고, 최소힙도 이와 비슷한 장점이 있다.
+
+예를 들어 입력이 1, 0, 3, 5, 2, 0, 1이고, L과 H가 각각 최소힙과 최대힙이라고 하자. 중앙값을 찾는 과정은 다음과 같다.
+
+1. 1을 읽음: L = [1], H = [], 중앙값은 1
+2. 0을 읽음: L = [1], H = [0], 중앙값은 (1+0)/2 = 0.5
+3. 3을 읽음: L = [1, 3], H = [0], 중앙값은 1
+4. 5를 읽음: L = [3, 5], H = [1, 0], 중앙값은 (3+1)/2 = 2
+5. 2를 읽음: L = [2, 3, 5], H = [1, 0], 중앙값은 2
+6. 0을 읽음: L = [2, 3, 5], H = [1, 0, 0], 중앙값은 (2+1)/2 = 1.5
+7. 1을 읽음: L = [1, 2, 3, 5], H = [1, 0, 0], 중앙값은 1
+
+```java
+private static final int DEFAULT_INITIAL_CAPACITY = 16;
+
+public static List<Double> onlineMedian(Iterator<Integer> sequence) {
+    // minHeap은 현재까지의 값이 큰 절반을 저장한다.
+    PriorityQueue<Integer> minHeap = new PriorityQueue<>();
+    // maxHeap은 현재까지의 값이 작은 절반을 저장한다.
+    PriorityQueue<Integer> maxHeap = new PriorityQueue<>(
+        DEFAULT_INITIAL_CAPACITY, Collections.reverseOrder()
+    );
+    List<Double> result = new ArrayList<>();
+
+    while (sequence.hasNext()) {
+        int x = sequence.next();
+        minHeap.add(x);
+        maxHeap.add(minHeap.remove());
+        // 짝수 개의 원소를 읽었다면 minHeap과 maxHeap에는 동일한 개수의 원소가
+        // 들어 있어야 한다. 홀수 개의 원소를 읽었다면, minHeap이 언제나 maxHeap보다
+        // 원소 한 개를 더 많이 가지고 있어야 한다.
+        if (maxHeap.size() > minHeap.size()) {
+            minHeap.add(maxHeap.remove());
+        }
+
+        result.add((minHeap.size() == maxHeap.size()
+                    ? 0.5 * (minHeap.peek() + maxHeap.peek())
+                    : (double)minHeap.peek()));
+    }
+    return result;
+}
+```
+
+매 원소마다 $O(log n)$의 시간이 걸린다. 이는 힙에 원소를 삽입하거나 빼내는 시간 복잡도와 비슷한다.
+
