add java epi 10.6, add cs graph solution

--- a/java_epi/ch10/ch10.힙.md
+++ b/java_epi/ch10/ch10.힙.md
@@ -324,3 +324,68 @@ public static List<Double> onlineMedian(Iterator<Integer> sequence) {
 
 매 원소마다 $O(log n)$의 시간이 걸린다. 이는 힙에 원소를 삽입하거나 빼내는 시간 복잡도와 비슷한다.
 
+## 문제 10.6 최대힙에서 가장 큰 원소 k개 구하기
+
+힙은 원소의 순서에 관해서 제한된 정보를 담고 있다. 그래서 가장 큰 원소 k개를 구하는 고지식한 알고리즘의 시간 복잡도는 정렬된 배열이나 균형 잡힌 이진 탐색 트리와 다르게 원소 개수에 따라 선형적으로 증가한다.
+
+배열 A에 최대힙이 주어졌을 때, 여기서 가장 큰 k개의 원소를 구하는 알고리즘은 설계하라. 힙의 자료구조를 수정하면 안 된다. 예를 들어 주어진 힙이 그림 10.1과 같다고 해 보자. 이를 배열로 표현하면 <561, 314, 401, 28, 156, 359, 271, 11, 3>이 되고, 가장 큰 원소 네 개는 561, 314, 401, 359가 된다.
+
+무식한 방법은 최댓값을 빼내는 연산을 k번 수행하는 것이다. 이때의 시간 복잡도는 $O(k log n)$이고, 여기서 n은 힙에 들어 있는 원소의 개수이다. 이 알고리즘은 힙을 수정해야 한다. 다른 방법은 문제 11.8의 해법을 통해, 배열에서 k번째로 작은 원소를 찾는 알고리즘을 사용하는 것이다. 이 방법의 시간 복잡도는 거의 확실히 $O(n)$이고, 이 방법 역시 힙을 수정해야 한다.
+
+여기서 소개할 알고리즘은 힙 안의 원소들은 부분적으로 정렬되어 있다는 사실을 사용한다. 부모 노드는 언제나 자식 노드보다 크거나 같다. 따라서 A[0]에 저장되어 있는 루트는 반드시 가장 큰 k개의 원소 중 하나, 정확히 말하면 가장 큰 원소와 같다. 두 번째로 큰 원소는 루트의 자식 노드인 A[1]과 A[2] 중에서 큰 원소가 되어야 한다. 우리는 이러한 방식으로 인덱스를 계속 처리해 나갈 것이다.
+
+다음에 처리해야 할 인덱스를 추적하는 데 가장 적합한 자료구조는 삽입을 빠르게 할 수 있고, 최댓값을 빠르게 찾아낼 수 있는 예를 들면 최대힙과 같은 자료구조이다. 따라서 최대힙을 통해 k개의 가장 큰 원소의 후보자들을 찾을 것이다. 초깃 값은 A[0]을 참조하기 위해 인덱스 0을 설정한다. 최대힙에 들어 있는 인덱스는 그 인덱스가 가리키는 A의 값을 통해 순서가 매겨진다. 그 뒤 최대힙에서 최댓값을 빼내는 연산을 k번 수행한다. i번째 인덱스를 빼낸 뒤에는 해당 인덱ㄷ스의 왼쪽 자식인 2i + 1과 오른쪽 자식인 2i + 2를 최대힙에 삽입한다.
+
+```java
+private static class HeapEntry {
+    public Integer index;
+    public Integer value;
+
+    public HeapEntry(Integer index, Integer value) {
+        this.index = index;
+        this.value = value;
+    }
+}
+
+private static class Compare implements Comparator<HeapEntry> {
+    #Override
+    public int compare(HeapEntry o1, HeapEntry o2) {
+        return Integer.compare(o2.value, o1.value);
+    }
+
+    public static final Compare COMPARE_HEAP_ENTRIES = new Compare();
+}
+
+private static final int DEFAULT_INITIAL_CAPACITY = 16;
+
+public static List<Integer> kLargestInBinaryHeap(List<Integer> A, int k) {
+    if (k <= 0) {
+        return Collections.EMPTY_LIST;
+    }
+
+    // (인덱스, 값)의 쌍을 candidateMaxHeap에 저장한다.
+    // 이 힙은 값에 의해 순서가 결정된다.
+    PriorityQueue<HeapEntry> candidateMaxHeap = new PriorityQueue<>(
+        DEFAULT_INITIAL_CAPACITY, Compare.COMPARE_HEAP_ENTRIES
+    );
+    candidateMaxHeap.add(new HeapEntry(0, A.get(0)));
+    List<Integer> result = new ArrayList<>();
+    for (int i = 0; i < k; i++) {
+        Integer candidateIdx = candidateMaxHeap.peek().index;
+        result.add(candidateMaxHeap.remove().value);
+
+        Integer leftChildIdx = 2 * candidateIdx + 1;
+        if (leftChildIdx < A.size()) {
+            candidateMaxHeap.add(new HeapEntry(leftChildIdx, A.get(leftChildIdx)));
+        }
+        Integer rightChildIdx = 2 * candidateIdx + 2;
+        if (rightChildIdx < A.size()) {
+            candidateMaxHeap.add(new HeapEntry(rightChildIdx, A.get(rightChildIdx)));
+        }
+    }
+    return result;
+}
+```
+
+삽입과 최댓값을 빼내는 전체 횟수는 $O(k)$이므로, 시간 복잡도는 $O(k log k)$가 되고, 공간 복잡도는 $O(k)$가 된다. 이 알고리즘은 기존의 힙을 수정하지 않는다.
+
