--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -91,3 +91,39 @@ i번째 원소를 접근하는데 $O(1)$시간이 걸린다면, 이 프로그램
 - 탐색하고자 하는 키가 복수 개일 때는 Arrays와 Collections 모두 이진 탐색에서 찾게될 원소가 어떤 원소일지 장담할 수 없다.
 - 만약 탐색하고자 할 키가 존재하지 않는다면 두 메서드 모두 (-(삽입할 지점)-1)을 반환한다.여기서 삽입할 지점이란 해당 키가 배열에 삽입하게 될 위치, 그러니까 해당 키보다 큰 첫 번째 원소의 인덱스, 혹은 해당 키값보다 작은 원소의 개수와 같다.
 
+## 문제 11.1 정렬된 배열에서 k가 첫 번째로 등장한 위치 찾기
+
+이진 탐색과 관련된 문제는 대부분 정렬된 배열에서 특정 원소의 위치를 찾는다. 다음 문제는 이진 탐색을 사용하되, 좀 더 추가적인 작업이 필요하다.
+
+정렬된 배열과 찾고자 하는 키가 주어졌을 때, 해당 키가 첫 번째로 등장하는 배열의 인덱스를 찾는 메서드를 작성하라. 찾는 키가 없다면 -1을 반환한다. 예를 들어 그림 11.1의 배열에 주어진 키값이 108이면 3을 반환해야 한다. 주어진 키가 285라면 6을 반환한다.
+
+> 힌트: 모든 엔트리가 k로 같다면 어떤 일이 발생하는가? k가 처음 등장했을 때 멈추면 안 된다.
+
+단순한 방법을 생각해 보자. 이진 탐색을 사용해서 k와 같은 임의의 원소 위치를 찾는다. (만약 k가 배열에 없다면 -1을 반환하면 된다.) 원소를 찾았다면, 거꾸로 탐색하면서 해당 원소가 처음 나타난 위치를 찾는다. 배열에 n개의 원소가 들어 있을 때 이진 탐색은 $O(log n)$이 걸린다. 처음 나타난 원소의 위치를 찾기 위해 거꾸로 탐색하는 과정은 최악의 경우에 $O(n)$이 소요된다. (모든 원소가 k인 경우를 생각해 보라.)
+
+이진 탐색의 근본적인 아이디어는 후보가 되는 집합을 유지하는 것이다. 이 문제에서 i번째 인덱스의 원소가 k라면, 해당 원소가 처음으로 k와 같은 원소인지는 모르더라도 그 뒤의 원소들은 후보에서 제외된다는 것은 알 수 있다. 따라서 i + 1보다 크거나 같은 인덱스의 모든 원소를 후보 집합에서 제외해도 된다.
+
+주어진 예제에 이 논리를 적용해 보자. k = 108이라고 가정한다. 최초의 후보는 모든 원소가 되므로 [0,9]가 된다. 중간에 있는 인덱스 4의 원소는 k와 같다. 그 다음 중간 위치는 1이고, 이 인덱스의 원소값은 -10이다. 후보 집합을 [2,3]으로 갱신한다. 그 중앙에 있는 인덱스 2의 값은 2이므로 후보 집합을 [3,3]으로 갱신한다. 3 위치에 있는 값은 108이므로 처음으로 k가 등장한 인덱스를 3으로 갱신한다. 이제 후보 집합은 비어 있는 [3,2]가 되므로 탐색을 종료하고 결과인 3을 반환한다.
+
+```java
+public static int searchFirstOfK(List<Integer> A, int k) {
+    int left = 0, right = A.size(), result = -1;
+    // A.subList(left, right + 1)이 후보 집합이다.
+    while (left <= right) {
+        int mid = left + ((right - left) / 2);
+        if (A.get(mid) > k) {
+            right = mid - 1;
+        } else if (A.get(mid) == k) {
+            result = mid;
+            // mid보다 오른쪽에 있는 원소는 절대 정답이 될 수 없다.
+            right = mid - 1;
+        } else { // A.get(mid) < k
+            left = mid + 1;
+        }
+    }
+    return result;
+}
+```
+
+매 반복마다 후보 집합의 크기가 반으로 줄어들기 때문에 복잡도의 상한은 $O(log n)$이다.
+
