--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -127,3 +127,38 @@ public static int searchFirstOfK(List<Integer> A, int k) {
 
 매 반복마다 후보 집합의 크기가 반으로 줄어들기 때문에 복잡도의 상한은 $O(log n)$이다.
 
+## 문제 11.2 정렬된 배열에서 인덱스와 값이 같은 엔트리 찾기
+
+원소가 중복되지 않고 정렬되어 있는 배열이 주어졌을 때, 인덱스 i의 값이 i와 같은 원소를 반환하는 효율적인 알고리즘을 설계하라. 예를 들어 입력이 <-2, 0, 2, 3, 6, 7, 9>로 주어진다면, 2 혹은 3을 반환해야 한다.
+
+> 힌트: 문제를 보통의 이진 탐색 문제로 바꾸어 보라.
+
+무식한 방법은 배열을 전부 탐색하면서 i번째 원소의 값이 i와 같은지 확인하는 것이다. 배열의 길이가 n일 때, 이 방법의 시간 복잡도는 $O(n)$이다.
+
+이 방법은 주어진 배열이 정렬되어 있다는 점과 중복된 원소가 없다는 점을 전혀 사용하지 않았다. 입력 배열의 특징을 잘 살펴보면, 인덱스의 크기가 늘어날수록 원소값과 인덱스는 적어도 하나씩 증가한다는 사실을 알 수 있다. A[j] > j라면, j 이후의 원소는 절대 정답이 될 수 없다. 왜냐하면 배열의 각 원소는 이전 원소보다 적어도 1만큼 크기 때문이다. 같은 이유로 A[j] < j인 경우에 j 이전의 원소는 절대 정답이 될 수 없다.
+
+따라서 A{i] = i를 만족하는 i를 이진 탐색 알고리즘을 통해 찾으면 된다. 간단하게 말하자면, 각 엔트리의 값이 A[i] - i인 배열 B에서 0을 찾는 전형적인 이진 탐색 문제와 같다. 실제로 배열 B를 만들 필요는 없고, B[i]를 참조하려는 경우에 A[i] - i를 대신 참조하면 된다.
+
+주어진 예제에서 배열 B는 <-2, -1, 0, 0, 2, 2, 3>과 같다. 이진 탐색으로 0을 찾는다면 그 결과는 인덱스 2 혹은 3이 될 것이다.
+
+```java
+public static int searchEntryEqualToItsIndex(List<Integer> A) {
+    int left = 0, right = A.size() - 1;
+    while (left <= right) {
+        int mid = left + (right - left) / 2;
+        int difference = A.get(mid) - mid;
+        // difference == 0이면, A.get(mid) == mid가 된다.
+        if (difference == 0) {
+            return mid;
+        } else if (difference > 0) {
+            right = mid - 1;
+        } else { // difference < 0
+            left = mid + 1;
+        }
+    }
+    return -1;
+}
+```
+
+시간 복잡도는 이진 탐색과 같은 $O(log n)$이 된다.
+
