--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -162,3 +162,41 @@ public static int searchEntryEqualToItsIndex(List<Integer> A) {
 
 시간 복잡도는 이진 탐색과 같은 $O(log n)$이 된다.
 
+## 문제 11.3 환형으로 정렬된 배열에서 탐색하기
+
+배열을 환형으로 시프트했을 때 정렬된 배열을 만들 수 있다면 해당 배열을 환형으로 정렬되었다고 한다. 예를 들어 다음 배열은 왼쪽으로 4번 시프트하면 정렬된 배열을 만들 수 있기 때문에 환형으로 정렬된 배열이다.
+
+<378, 478, 550, 631, 103, 203, 220, 234, 278, 368>
+A[0],A[1],A[2],A[3],A[4],A[5],A[6],A[7],A[8],A[9]
+
+환형으로 정렬된 배열이 주어졌을 때 가장 작은 원소의 위치를 찾는 $O(log n)$ 알고리즘을 설계해 보라. 중복된 원소는 없다고 가정해도 좋다. 예를 들어 위 배열이 주어진다면 4를 반환해야 한다.
+
+> 힌트: 분할 정복법을 사용해 보라.
+
+무식한 방법은 배열을 차례대로 읽으면서 최솟값을 찾는 것이다. 배열의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n)$이 된다.
+
+이 방법의 배열 A의 특별한 속성을 사용하지 않았다. 예를 들어 임의의 m에 대하여 A[m] > A[n-1]이라면 최솟값은 반드시 [m+1, n-1] 사이에서 존재해야 한다. 역으로 A[m] < A[n-1]이라면 [m+1, n-1] 사이에서는 절대 최솟값이 나타날 수 없다(최소값은 적어도 A[m]이므로). 입력에서 중복된 원소는 존재하지 않는다고 했으므로 A[m] = A[n-1]은 될 수가 없다. 이 두 가지 사실을 이용하면 다음과 같은 이진 탐색 알고리즘을 사용할 수 있다.
+
+```java
+public static int searchSmallest(List<Integer> A) {
+    int left = 0, right = A.size() - 1;
+    while (left <= right) {
+        int mid = left + (right - left) / 2;
+        if (A.get(mid) > A.get(right)) {
+            // 최솟값은 반드시 A.subList(mid + 1, right + 1)에서 존재한다.
+            left = mid + 1;
+        } else { // A.get(mid) < A.get(right)
+            // 최솟값은 절대 A.subList(mid + 1, right + 1)에 있을 수 없다.
+            // A.subList(left, mid)에서 존재한다.
+            right = mid;
+        }
+    }
+    // left == right가 되면 루프를 종료한다.
+    return left;
+}
+```
+
+이 문제의 시간 복잡도는 이진 탐색의 시간 복잡도인 $O(log n)$과 같다.
+
+일반적으로 원소가 중복되어 나타난다면 이 문제는 선형시간보다 빠르게 풀 수 없다. 예를 들어 A에 n-1개의 1과 한 개의 0이 존재한다면 모든 원소를 탐색하지 않는 이상 0을 찾을 수 없다.
+
