--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -200,3 +200,41 @@ public static int searchSmallest(List<Integer> A) {
 
 일반적으로 원소가 중복되어 나타난다면 이 문제는 선형시간보다 빠르게 풀 수 없다. 예를 들어 A에 n-1개의 1과 한 개의 0이 존재한다면 모든 원소를 탐색하지 않는 이상 0을 찾을 수 없다.
 
+## 문제 11.4 정수의 제곱근 구하기
+
+음이 아닌 정수가 주어졌을 때, 제곱한 값이 주어진 정수보다 작거나 같은 정수 중에서 가장 큰 정수를 찾는 프로그램을 작성하라. 예를 들어 16이 입력으로 주어지면 4를 반환해야 하고, 300이 주어지면 17을 반환해야 한다. $17^2 = 289 < 300$이고, $18^2 = 324 > 300$이기 때문이다.
+
+> 힌트: 코너 케이스를 살펴보라.
+
+무식한 방법은 1부터 키값인 k까지 모두 제곱해 본 뒤 그 제곱값이 k를 넘는 순간 멈추면 된다. 이 방법의 시간 복잡도는 $O(k)$이다. 한 번 반복(iteration)하는 데 걸리는 시간이 나노초라고 했을 때, 64비트 환경에서 이 알고리즘은 500년이나 걸린다.
+
+문제를 좀 더 자세히 살펴보자. 숫자를 하나씩 증가해 가면서 확인하는 방법이 쓸모 없다는 건 확실하다. 예를 들어 $x^2 < k$라면, x보다 작은 숫자는 절대 답이 될 수 없고, $x^2 > k$라면 x보다 같거나 큰 숫자 또한 답이 될 수 없다.
+
+커다란 후보 집합을 한 번에 제거할 수 있다는 점에서 이진 탐색을 생각해 볼 수 있다. 특히, 제곱값이 k보다 작거나 같은 범위 구간을 좁혀 나갈 것이다.
+
+먼저 후보 집단의 구간을 [0, k]로 초기화한다. $m = \lfloor(l + r)/2\rfloor$를 k와 비교한 뒤 구간 정보를 갱신한다. 만약 $m^2 \le k$라면 m보다 작거나 같은 숫자의 제곱값은 언제나 k보다 작거나 같다. 따라서 구간을 [m+1, k]로 갱신한다. 만약 $m^2 > k$라면, m보다 크거나 같은 모든 숫자의 제곱값은 k보다 크기 때문에 구간 정보를 [l, m-1]로 갱신한다. 후보 집합 구간이 공집합이 될 때까지 반복한다. 즉, l보다 작은 모든 숫자의 제곱값이 k보다 작거나 같고 l의 제곱값이 k보다 클 때까지 반복한다. 이때 결괏값은 l - 1이 된다.
+
+예를 들어 k = 21이라면, 후보 집단의 구간을 [0, 21]로 초기화한다. 중간값인 $m = \lfloor(0 + 21) / 2\rfloor = 10$의 제곱값은 $10^2 > 21$이므로, 구간을 [0, 9]로 갱신한다. 이제 $m = \lfloor(0 + 9) / 2\rfloor = 4$의 제곱값은 $4^2 < 21$이므로 구간을 [5, 9]로 갱신한다. 이제 $m = \lfloor(5 + 8) / 2\rfloor = 7$의 제곱값은 $7^2 > 21$이므로 구간을 [5, 6]으로 갱신한다. 이제 $m = \lfloor(5 + 6) / 2\rfloor = 5$의 제곱값은 $5^2 > 21$이므로 구간을 [5, 4]로 갱신한다. 구간의 오른쪽 값이 왼쪽값보다 작아졌으므로 후보 집합 구간이 공집합이 되었다. 따라서 5 - 1 - 4를 결과로 반환하면 된다.
+
+k = 25인 경우에는 구간 정보가 [0, 25], [0, 11], [6, 11], [6, 7], [6, 5]와 같이 변하고, 반환되는 값은 6 - 1 = 5가 된다.
+
+```java
+public static int squareRoot(int k ) {
+    long left = 0, right = k;
+    // 후보 구간 [left, right]가 주어졌을 때, left보다 작은 모든 숫자의 제곱값(<=k)이고,
+    // right보다 큰 모든 숫자의 제곱값(>k)이다.
+    while (left <= right) {
+        long mid = left + ((right - left) / 2);
+        long midSquared = mid * mid;
+        if (midSquared <= k) {
+            left = mid + 1;
+        } else {
+            right = mid - 1;
+        }
+    }
+    return (int)left - 1;
+}
+```
+
+시간 복잡도는 [0, k]에서 이진 탐색하는 것과 같으므로 $O(log k)$가 된다.
+
