--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -238,3 +238,61 @@ public static int squareRoot(int k ) {
 
 시간 복잡도는 [0, k]에서 이진 탐색하는 것과 같으므로 $O(log k)$가 된다.
 
+## 문제 11.5 실수의 제곱근 구하기
+
+제곱근은 반복법(iterative method) 혹은 로그와 같은 복잡한 수치 기법을 사용해서 구현할 수 있다. 하지면 면접관이 여러분에게 그러한 기법을 기대하고 제곱근 구하는 문제를 내는 것은 아니다.
+
+부동소수점 값(floating point value)이 주어졌을 때 그 제곱근을 반환하는 함수를 구현하라.
+
+> 힌트: 반복적으로 이전 구간 정보 안에서 정답을 좁혀 나가도록 구간 정보를 갱신한다.
+
+x를 입력이라고 하자. 한 가지 방법은, 11.4의 해법에 나온 방법을 사용해서 $n^2 \le x$이고 $(n + 1)^2 > x$인 n을 찾는다. 그 뒤 [n, n + 1] 사이에 있는 값 중에서 정해진 오차 내에서 x의 제곱근을 찾으면 된다.
+
+하지만 이진 탐색을 문제에 곧바로 적용할 수 있으면, 정수 계산과 소수 계산하는 부분을 분해하지 않을 수도 있다. 그 이유는 x의 제곱근보다 큰 숫자가 있을 때, 이 숫자보다 큰 숫자는 고려하지 않아도 되기 때문이다. 비슷한 이유로 x의 제곱근보다 작은 숫자가 있을 때, 이보다 더 작은 숫자는 고려하지 않아도 된다.
+
+정답 구간의 하한과 상한은 각각 0과 부동소수점이 표현할 수 있는 가장 큰 값이라고 간단하게 정할 수 있다. 하지만 이 경우는 유한 정밀 연산(finite precision arithmetic)에 대해 제대로 동작하지 않을 수 있다. 첫 중간값을 제곱했을 때 그 값이 오버플로될 것이기 때문이다.
+
+제곱근이 x보다 클 수도 있기 때문에 $(\sqrt{1/4} = 1/2)$ 초깃값을 [0, x]로 설정할 수도 없다. 하지만 $x \ge 1.0$일 때의 하한과 상한은 각각 1.0과 x라고 할 수 있다. 왜냐하면 $1.0 \le x$이고, $x \le x^2$이기 때문이다. 반대로 $x < 1.0$인 경우에는 x와 1.0을 각각 하한과 상한으로 설정할 수 있다. 왜냐하면 x의 제곱근이 x보다 크지만 1.0보다는 작기 때문이다. 부동소수점의 제곱근을 구하는 문제는 근본적으로 정수의 제곱근을 구하는 문제(11.4의 문제)와는 전혀 다르다는 사실을 명심하라. 앞의 문제에서는 정답이 포함된 초기 구간은 언제나 [0, x]였다.
+
+```java
+public static double squareRoot(double x) {
+    // x와 1.0을 비교해서 탐색할 구간을 정한다.
+    double left, right;
+    if (x < 1.0) {
+        left = x;
+        right = 1.0;
+    } else { // x >= 1.0
+        left = 1.0;
+        right = x;
+    }
+
+    // 오차 범위 내에서 left < right를 만족하는 이상 탐색을 계속한다.
+    while (compare(left, right) == Ordering.SMALLER) {
+        double mid = left + 0.5 * (right - left);
+        double midSquared = mid * mid;
+        if (compare(midSquared, x) == Ordering.EQUAL) {
+            return mid;
+        } else if (compare(midSquared, x) == Ordering.LARGER) {
+            right = mid;
+        } else {
+            left = mid;
+        }
+    }
+
+    return left;
+}
+
+private static enum Ordering { SMALLER, EQUAL, LARGER }
+
+private static Ordering compare(double a, double b) {
+    final double EPSILON = 0.00001;
+    // 정밀도를 체크할 때 정규화 과정을 거친다.
+    double diff = (a - b) / b;
+    return diff < -EPSILON
+        ? Ordering.SMALLER
+        : (diff > EPSILON ? Ordering.LARGER : Ordering.EQUAL);
+}
+```
+
+s를 오차범위라 할 때, 시간 복잡도는 $O(log x/s)$와 같다.
+
