--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -296,3 +296,67 @@ private static Ordering compare(double a, double b) {
 
 s를 오차범위라 할 때, 시간 복잡도는 $O(log x/s)$와 같다.
 
+## 일반적인 탐색
+
+지금부터 이진 탐색을 사용하지 않는 다른 탐색 문제를 몇 가지 살펴본다. 예를 들어 램(RAM)과 계산 시간의 트레이드오프, 최솟값과 최댓값을 동시에 찾을 때의 불필요한 비교 연산 피하기, 무작위성을 이용한 효율적인 삭제 연산, 빠진 원소를 찾기 위한 비트 조작 등이 있다.
+
+## 문제 11.6 정렬된 2차원 배열에서 탐색하기
+
+2차원 배열에서 행과 열의 원소값이 감소하지 않는다면 정렬되어 있다고 하자. 다음은 정렬된 2차원 배열이다.
+
+![정렬된 2차원 배열](11.3.svg)
+
+정렬된 2차원 배열과 임의의 숫자가 주어졌을 때, 해당 숫자가 배열에 존재하는지 확인하는 알고리즘을 작성하라. 예를 들어 위 그림의 2차원 배열과 숫자 7이 주어졌을 때 false를 반환해야 한다. 주어진 숫자가 8이라면 true를 반환한다.
+
+> 힌트: 비교할 때마다 행 혹은 열을 후보에서 제외해 나갈 수 있는가?
+
+2차원 배열을 A라 하고, 입력으로 주어진 숫자를 x라 하자. 각 행에 대해 이진 탐색을 수행한다면 행의 개수가 m이고 열의 개수가 n일 때, 총 시간 복잡도는 $O(m log n)$이 된다.(만약 각 열에 대해 이진 탐색을 수행한다면, 시간 복잡도는 $O(n log m)$이 된다.)
+
+하지만 이 방법은 행과 열이 모두 정렬되어 있다는 사실을 사용하지 않고, 각 행에 대해 독립적으로 연산을 수행하고 있다. 예를 들어 x < A[0][0]이라면, x는 어떤 행과 열에서도 존재하지 않을 것이다. 정렬된 2차원 배열의 속성에 따르면 A[0][0]이 배열 A에서 가장 작은 원소이기 때문이다.
+
+하지만 x > A[0][0]이라면, 배열 A의 첫 번째 행 혹은 첫 번째 열을 정답 후보에서 제외할 수 없다. 행과 열을 모두 탐색하는 데 $O(mn)$의 시간이 걸리고, 이는 앞의 해법보다 훨씬 못한 방법이다. x < A[m - 1][n - 1]일 때도 같은 문제가 발생한다.
+
+좋은 방법을 찾기 위해서는 꼭짓점 부분을 먼저 살펴보는 것이 좋다. A[0][0]과 A[m - 1][n - 1]은 뭔가 얻을 게 없었다. 하지만 2차원 배열의 꼿짓점에는 다른 부분도 존재한다. 예를 들어 x와 A[0][n - 1]을 비교해볼 수 있다. x = A[0][n - 1]이라면 이미 정답을 찾은 꼴이 된다. 그게 아니라면, 다음과 같은 경우가 존재한다.
+
+- x > A[0][n - 1]이라면 x가 0번째 행의 모든 원소보다 크다는 말이 된다.
+- x < A[0][n - 1]이라면 x가 n - 1번째 열의 모든 원소보다 작다는 말이 된다.
+
+두 경우 모두 다음에 탐색할 2차원 배열의 행 혹은 열을 하나씩 줄여 준다. 이와 비슷하게 A[m - 1][0]과 비교해 볼 수 있다.
+
+![(a)7탐색(없음)](11.4-1.svg)
+
+![(b)8탐색(있음)](11.4-2.svg)
+
+그림 a는 입력 숫자가 7일 때 알고리즘이 어떻게 진행되는지 보여 준다.
+
+오른쪽 꼭대기에 있는 A[0][4] = 6과 7을 비교한다. 7 > 6이므로 7은 0번째 행에 존재할 수 없다.
+A[1][4] = 21과 비교한다. 7 < 21이므로 7은 4번 열에 존재할 수 없다.
+A[1][3] = 9와 비교한다. 7 < 9이므로 7은 3번 열에 존재할 수 없다.
+A[1][2] = 5와 비교한다. 7 > 5이므로 7은 1번 행에 존재할 수 없다.
+A[2][2] = 6과 비교한다. 7 > 6이므로 7은 2번 행에 존재할 수 없다.
+A[3][2] = 8과 비교한다. 7 < 8이므로 7은 2번 열에 존재할 수 없다.
+A[3][1] = 6과 비교한다. 7 > 6이므로 7은 3번 행에 존재할 수 없다.
+A[4][1] = 8과 비교한다. 7 < 8이므로 7은 1번 열에 존재할 수 없다.
+A[4][0] = 6과 비교한다. 7 > 6이므로 7은 4번 행에 존재할 수 없다.
+A[5][0] = 8과 비교한다. 7 < 8이므로 7은 0번 열에 존재할 수 없다.
+더 이상 비교할 원소가 없으므로 false를 반환한다.
+
+```java
+public static boolean matrixSearch(List<List<Integer>> A, int x) {
+    int row = 0, col = A.get(0).size() - 1; // 오른쪽 위에 있는 꼭짓점부터 시작한다.
+    // 아직 분류되지 않은 행과 열이 있는 동안 탐색을 계속해 나간다.
+    while (row < A.size() && col >= 0) {
+        if (A.get(row).get(col).equals(x)) {
+            return true;
+        } else if (A.get(row).get(col) < x) {
+            ++row; // 행을 제거한다.
+        } else { // A.get(row).get(col) > x
+            --col; // 열을 제거한다.
+        }
+    }
+    return false;
+}
+```
+
+매번 행 혹은 열을 제거한다. 따라서 최대 m + n - 1개의 원소만 살펴보면 되므로 시간 복잡도는 $O(m + n)$이 된다.
+
