--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -360,3 +360,63 @@ public static boolean matrixSearch(List<List<Integer>> A, int x) {
 
 매번 행 혹은 열을 제거한다. 따라서 최대 m + n - 1개의 원소만 살펴보면 되므로 시간 복잡도는 $O(m + n)$이 된다.
 
+## 문제 11.7 최솟값과 최댓값을 동시에 찾기
+
+비교 가능한 객체로 이루어진 배열이 주어졌을 때 n-1번의 비교 연산을 통해 최솟값 혹은 최댓값을 찾을 수 있다. 여기서 n은 배열의 길이와 같다.
+
+비교 연산은 비용이 클 가능성이 있다. 예를 들어 여러 번 중첩된 호출을 해야 할 수도 있고, 길이가 긴 문자열을 비교할 수도 있다. 따라서 최솟값과 최댓값을 따로 찾을 때 소요되는 2(n-1)번보다 적은 비교 연산을 통해 최솟값과 최댓값을 동시에 찾을 수 있는 지 묻는 것은 꽤 괜찮은 문제가 된다.
+
+배열에서 최대 원소와 최소 원소를 찾는 알고리즘을 설계하라. 예를 들어 A = <3,2,5,1,2,4>인 경우 최솟값은 1이고 최댓값은 5이다.
+
+> 힌트: a < b이고 b < c이면 a < c가 된다는 사실을 사용하면 무식한 방법의 연산 횟수를 줄일 수 있다.
+
+무식한 방법은 최솟값과 최댓값을 각각 찾는 것이다. 이 방법은 비교 연산을 2(n-1)번 사용한다. 조금 더 최적화를 해 본다면, 최솟값을 찾은 뒤에 최댓값을 찾을 때 최솟값과 비교하지 않음으로써 비교 횟수를 한 번 줄일 수 있다.
+
+이 문제를 어떤 선수 그룹에서 가장 강한 선수와 가장 약한 선수를 골라내는 문제라고 생각해 보자. 가장 약한 선수를 고르는 경우에는 시합에서 누가 이길지는 살펴볼 필요가 없다. 서로 다른 선수 쌍들끼리 n/2번의 시합을 붙여 보면 가장 약한 선수가 될 후보를 골라낼 수 있다. 가장 강한 선수는 경기에서 이긴 n/2명의 선수 중에 있을 테고, 가장 약한 선수는 경기에서 진 n/2명의 선수 중에 있을 것이다.
+
+앞에서 유추한 결과 배열에서 인접한 쌍끼리 비교함으로써 최솟값 후보와 최댓값 후보를 나눌 수 있다. 즉 n/2번의 비교를 통해 n/2개의 최솟값 후보와 n/2개 최댓값 후보를 찾는다. 최솟값 후보에서 n/2 - 1번의 비교를 통해 최솟값을 찾을 수 있고, 최댓값 후보에서 n/2 - 1번의 비교를 통해 최댓값을 찾을 수 있다. 따라서 통 3n/2 - 2번의 비교를 통해 최댓값과 최솟값을 찾을 수 있다.
+
+간단하게 구현해 보면 위의 알고리즘은 $O(n)$의 공간을 추가로 필요로 한다. 하지만 추가 공간을 사용하지 않고도 스트리밍 방법으로 구현할 수 있다. 입력 순서대로 두 쌍을 비교하면서 최솟값과 최댓값을 유지해 나가는 방법을 쓰면 된다. 각 쌍을 비교할 때 총 3번의 비교가 필요하다는 사실을 명심하라.
+
+앞의 예제를 다시 살펴보자.
+
+처음에는 3과 2를 비교한다. 3 > 2이므로 2가 최솟값, 3이 최댓값이 된다. 그다음 5와 1을 비교한다. 5 > 1이므로 5를 현재 최댓값인 3과 비교한 뒤 현재 최댓값을 5로 갱신한다. 1을 현재 최솟값인 2와 비교한 뒤 현재 최솟값을 1로 갱신한다. 그다음 2와 4를 비교한다. 4 > 2이므로 4를 현재 최댓값인 5와 비교한다. 4 < 5이므로 현재 최댓값을 그대로 둔다. 2를 현재 최솟값인 1과 비교한다. 2 > 1이므로 현재 최솟값을 그대로 둔다.
+
+```java
+private static class MinMax {
+    public Integer min;
+    public Integer max;
+
+    public MinMax(Integer min, Integer max) {
+        this.min = min;
+        this.max = max;
+    }
+
+    private static MinMax minMax(Integer a, Integer b) {
+        return Integer.compare(b, a) < 0 ? new MinMax(b, a) : new MinMax(a, b);
+    }
+
+    public static MinMax findMinMax(List<Integer> A) {
+        if (A.size() <= 1) {
+            return new MinMax(A.get(0), A.get(0));
+        }
+
+        MinMax globalMinMax = new MinMax(A.get(0), A.get(1));
+        // 두 원소를 한번에 처리한다.
+        for (int i = 2; i < A.size(); i += 2) {
+            MinMax localMinMax = MinMax.minMax(A.get(i), A.get(i+1));
+            globalMinMax = new MinMax(Math.min(globalMinMax.min, localMinMax.min),
+                                      Math.max(globalMinMax.max, localMinMax.max));
+        }
+        // 배열에 원소가 홀수 개 존재할 때,
+        // 우리는 여전히 마지막 원소를 이미 구한 최솟값 및 최댓값과 비교해야 한다.
+        if ((A.size() % 2) != 0) {
+            globalMinMax = new MinMax(Math.min(globalMinMax.min, A.get(A.size() - 1)),
+                                      Math.max(globalMinMax.max, A.get(A.size() - 1)));
+        }
+        return globalMinMax;
+    }
+}
+```
+
+시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
