--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -421,39 +421,86 @@ private static class MinMax {
 
 시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
 
-## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
+## 문제 11.8 k번째로 큰 원소 찾기
 
-배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
+많은 알고리즘이 서브 루틴으로 배열에서 k번째로 큰 원소를 찾는 연산이 필요하다. 첫 번째로 큰 원소는 배열에서 가장 큰 원소이다. 배열의 길이가 n일 때 n번째로 큰 원소는 배열에서 가장 작은 원소이다.
 
-> 힌트: i에서 j까지의 부분배열은 이 조건을 만족하지만, i에서 j+1까지의 부분배열은 그렇지 않다면 어떻게 해야할까?
+예를 들어 A = <3,2,1,5,4>가 입력으로 주어졌을 때, A[3]은 A에서 첫 번째로 큰 원소이고, A[0]은 세 번째로 큰 원소, A[2]는 다섯 번째로 큰 원소이다.
 
-무식한 방법부터 생각해 보자. 해시 테이블을 이용해서 모든 부분배열에 중복된 원소가 존재하는지 확인하면 된다. 이 방법의 시간 복잡도는 배열의 길이가 n일 때 $O(n^3)$이 된다. 왜냐하면 부분 배열의 전체 개수는 $O(n^2)$이고, 이들의 평균 길이는 $O(n)$이기 때문이다.
+배열에서 k번째로 큰 원소를 찾는 알고리즘을 설계하라. 중복되는 원소는 없다고 가정해도 좋다.
 
-이 방법을 개선해 보자. 어떤 부분 배열에 중복된 원소가 존재한다면, 해당 부분 배열을 포함하는 모든 배열은 중복된 원소를 가지고 있을 것이다. 따라서 주어진 시작 인덱스에 대해서 중복된 원소가 없는 가장 긴 부분배열은 $O(n)$ 시간에 구할 수 있다. 시작 지점에서 배열을 차례대로 훑으면서 이전에 등장하지 않았던 원소를 하나씩 해시 테이블에 추가해 보면 된다. 이 방법의 시간 복잡도는 $O(n^2)$이다. 중복된 원소를 발견하는 순간 시작 인덱스를 옮기면 된다.
+> 힌트: 무작위성과 분할 정복법을 함께 사용하라.
 
-이전 결과를 재사용하면 시간 복잡도를 더 개선할 수 있다. 예를 들어 어떤 인덱스로 끝나는 가장 긴 중복이 없는 부분배열을 알고 있다고 가정하자. 이때 그 다음 인덱스에서 끝나는 가장 긴 중복이 없는 부분배열은 다음 두 가지 경우 중 하나가 된다. 첫 번째는, 다음 인덱스의 원소가 현재 인덱스 기준으로 가장 긴 중복 없는 부분배열에 없는 원소라면, 단순히 이 부분배열 뒤에 다음 원소를 추가한다. 두 번째로 이미 부분배열에 존재한다면, 중복된 원소가 생기지 않도록 시작 인덱스를 앞으로 옮겨준다. 이 케이스 분석을 배열을 순회하는 동시에 수행하면 된다. 그러기 위해선 해시 테이블에 각 원소가 등장한 가장 최근의 인덱스와 현재 원소에서 끝나는 가장 긴 부분배열을 저장하면 된다.
+무식한 방법으로 먼저 접근해 보자. 배열 A를 감소하는 순서대로 정렬한 뒤에 k - 1번째 인덱스에 있는 원소를 반환하면 쉽다. 배열 A의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n log n)$이 된다.
 
-<f,s,f,e,t,w,e,n,w,e>에서 두 번째 위치의 원소를 처리한다고 해 보자. 1번 인덱스에서 끝나고 중복이 없는 가장 긴 부분배열은  0에서 1까지의 부분배열이다. 해시 테이블에 2번 인덱스의 원소, 즉 f가 이미 존재하므로 2번 인덱스에서 끝나고 중복이 없는 가장 긴 부분배열은 1에서 2까지의 부분배열이다. 3에서 5 사이의 인덱스는 모두 처음 등장하는 원소이다. 6번 인덱스의 원소인 e는 5번 인덱스에서 끝나는 가장 긴 부분배열에 등장한다. 정확히 말하면 3번 인덱스에 등장한다. 따라서 6번 인덱스에서 끝나는 가장 긴 부분배열은 4번 인덱스에서 시작해야 한다.
+하지만 굳이 배열을 정렬할 필요는 없다. 이 문제는 정렬하지 않아도 풀 수 있다. 예를 들어 첫 번쨰로 큰 원소는 배열을 한 번 훑으면 찾을 수 있다.
+
+일반적인 k에 대한 답을 구할 때, 문제 10.4의 해법과 같이 k개의 후보 원소를 최소힙에 저장해 두어도 된다. 이 방법의 시간 복잡도는 $O(n log k)$이고 공간 복잡도는 $O(k)$이다. 정렬보다 빠르지만 추가 공간을 사용한다. 하지만 이 방법 또한 필요 이상의 정보를 제공한다. 이 방법은 가장 큰 원소 k개를 정렬된 순서대로 계산하는데, 원하는 정보는 k번째로 큰 원소 하나뿐이다.
+
+배열을 완전히 정렬하지 말고 k번째로 큰 원소를 주어진 배열 내에서 구해보자. 임의의 원소(피벗)를 고른 뒤 피벗보다 큰 원소와 작은 원소로 나눈다. (문제에서 중복된 원소가 없다고 했기 때문에 피벗과 같은 원소는 존재하지 않는다.) 피벗보다 큰 원소가 k - 1개라면 피벗은 k번째로 큰 원소가 된다. 만약 피벗보다 큰 원소가 k - 1개보다 많다면, 피벗보다 작은 원소는 버려도 된다. 왜냐하면 이 경우에 k번째로 큰 원소는 반드시 피벗보다 크기 때문이다. 만약 피벗보다 큰 원소가 k - 1개보다 적다면, 피벗보다 큰 원소는 무시해도 된다.
+
+이 방법은 확인해야 할 원소 수를 보통, 절반 가까이 줄이기 때문에 직관적으로 좋은 해결법이다.
+
+단순하게 구현하면 추가 공간을 $O(n)$만큼 사용해야 한다. 하지만 분할된 위치를 기록할 수 있다면, 추가 공간을 사용하지 않고 주어진 배열 안에서 구현할 수 있다.
 
 ```java
-public static int longestSubarrayWithDistinctEntries(List<Integer> A) {
-    // 각 원소가 등장한 가장 최근의 위치를 기록한다.
-    Map<Integer, Integer> mostRecentOccurrence = new HashMap<>();
-    int longestDupFreeSubarrayStartIdx = 0, result = 0;
-    for (int i = 0; i < A.size(); i++) {
-        Integer dupIdx = mostRecentOccurrence.put(A.get(i), i);
-        // A.get(i)의 원소가 이전에 등장한 적이 있다.
-        // 현재의 가장 긴 부분배열에도 해당 원소가 있는가?
-        if (dupIdx != null) {
-            if (dupIdx >= longestDupFreeSubarrayStartIdx) {
-                result = Math.max(result, i - longestDupFreeSubarrayStartIdx);
-                longestDupFreeSubarrayStartIdx = dupIdx + 1;
-            }
+private static class Compare {
+    private static class GraterThan implements Comparator<Integer> {
+        public int compare(Integer a, Integer b) {
+            return (a > b) ? -1 : (a.equals(b)) ? 0 : 1;
         }
     }
-    result = Math.max(result, A.size() - longestDupFreeSubarrayStartIdx);
-    return result;
+
+    public static final GreaterThan GREATER_THAN = new GreaterThan();
+}
+
+// 1에서부터 시작한다. 주어진 배열이 A = [3,1,-1,2]라면
+// findKthLargest(A, 1)은 3을 반환하고, findKthLargest(A, 2)는 2를 반환한다.
+// findKthLargest(A, 3)은 1을 반환하고, findKthLargest(A, 4)는 -1를 반환한다.
+public static int findKthLargest(List<Integer> A, int k) {
+    return findKth(A, k, Compare.GREATER_THAN);
+}
+
+public static int findKth(List<Integer> A, int k, Comparator<Integer> cmp) {
+    int left = 0, right = A.size() - 1;
+    Random r = new Random(0);
+    while (left <= right) {
+        // [left, right] 사이에서 임의의 피벗을 구한다.
+        int pivotIdx = r.nextInt(right - left + 1) + left;
+        int newPivotIdx = partitionAroundPivot(left, right, pivotIdx, A, cmp);
+        if (newPivotIdx == k - 1) {
+            return A.get(newPivotIdx);
+        } else if (newPivotIdx > k - 1) {
+            right = newPivotIdx - 1;
+        } else { // newPivotIdx < k - 1
+            left = newPivotIdx + 1;
+        }
+    }
+}
+
+// A.subList(left, right + 1)을 pivotIdx를 기준으로 나누고, 나누는 작업이 끝난 뒤에
+// 새로운 피벗의 인덱스인 newPivotIdx를 반환한다. 따라서 해당 작업이 끝난 뒤에는
+// A.subList(left, newPivotIdx)에는 피벗보다 작은 원소들이 들어 있을 것이고
+// A.subList(newPivotIdx + 1, right + 1)에는 피벗보다 큰 원소들이 들어 있을 것이다.
+//
+// 참고로, "~보다 작다"는 Comparator 객체에 정의되어 있다.
+//
+// 나누는 작업이 끝난 뒤에 피벗의 새로운 인덱스를 반환한다.
+private static int partitionAroundPivot(int left, int right, int pivotIdx, List<Integer> A, Comparator<Integer> cmp) {
+    int pivotValue = A.get(pivotIdx);
+    int newPivotIdx = left;
+
+    Collections.swap(A, pivotIdx, right);
+    for (int i = left; i < right; i++) {
+        if (cmp.compare(A.get(i), pivotValue) < 0) {
+            Collections.swap(A, i, newPivotIdx++);
+        }
+    }
+    Collections.swap(A, right, newPivotIdx);
+    return newPivotIdx;
 }
 ```
 
-각 원소를 처리하는 데 상수 시간이 걸리기 때문에 전체 시간 복잡도는 $O(n)$이 된다.
+처리해야 할 원소의 수를 대략 절반씩 줄일 수 있기 때문에, 평균적인 시간 복잡도 $T(n) = O(n) + T(n/2)$를 만족한다. 이 수식을 풀면 $T(n) = O(n)$이 된다. 공간 복잡도는 $O(1)$이 된다. 최악의 경우는 임의로 선택한 피벗이 현재 부분배열에서 항상 최솟값이거나 최댓값인 경우이고, 이 경우의 시간 복잡도는 $O(n^2)$이 된다.
+
+최악의 경우가 발생할 확률은 입력 배열의 길이에 비례해서 기하급수적으로 줄어들기 때문에 실무에서는 전혀 문제가 되지 않는다. 따라서 임의로 선택하는 알고리즘의 시간 복잡도는 $O(n)$이라고 말할 수 있다.
