--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -504,3 +504,59 @@ private static int partitionAroundPivot(int left, int right, int pivotIdx, List<
 처리해야 할 원소의 수를 대략 절반씩 줄일 수 있기 때문에, 평균적인 시간 복잡도 $T(n) = O(n) + T(n/2)$를 만족한다. 이 수식을 풀면 $T(n) = O(n)$이 된다. 공간 복잡도는 $O(1)$이 된다. 최악의 경우는 임의로 선택한 피벗이 현재 부분배열에서 항상 최솟값이거나 최댓값인 경우이고, 이 경우의 시간 복잡도는 $O(n^2)$이 된다.
 
 최악의 경우가 발생할 확률은 입력 배열의 길이에 비례해서 기하급수적으로 줄어들기 때문에 실무에서는 전혀 문제가 되지 않는다. 따라서 임의로 선택하는 알고리즘의 시간 복잡도는 $O(n)$이라고 말할 수 있다.
+
+## 문제 11.9 빠진 IP 주소 찾기
+
+하드 드라이브의 저장 용량은 램의 저장 용량보다 크다. 이 때문에 시간 및 공간에 트레이드오프(trade-off)가 발생한다.
+
+32비트로 이루어진 IP 주소가 대략 10억 개 들어 있다고 생각하자. 파일에 들어 있지 않은 IP 주소를 찾는 프로그램은 어떻게 구현할 수 있을까?
+
+> 힌트: 파일에 없는 주소가 있다고 확실할 수 있는가?
+
+파일이 32비트 숫자로 구성되어 있다고 생각한다면, 입력 파일을 정렬한 뒤에 하나씩 살펴보면서 빠진 숫자가 무엇인지 찾아보면 된다. 전체 IP 주소의 개수가 n일 때 이 방법의 시간 복잡도는 $O(n log n)$이 된다. 램을 적게 사용하기 위해서는 정렬을 디스크 위에서 수행해야 하는데, 일반적으로 디스크에서의 연산은 굉장히 느리다.
+
+가장 큰 IP 주소가 255.255.255.255이므로 여기에 1을 더하면 오버플로가 발생한다. 가장 작은 IP 주소에 1을 빼도 마찬가지로 오버플로가 발생한다.
+
+파일에 있는 모든 IP 주소를 해시 테이블에 넣은 뒤, 0.0.0.0부터 시작해서 해시 테이블에 없는 IP 주소를 찾아볼 수도 있다. 각 정수값을 해시 테이블에 넣는 데 10바이트 정도 필요하다고 했을 때, 이 방법은 대략 10기가 바이트가 필요하므로 상당한 오버헤드가 걸린다.
+
+모든 가능한 IP 주소를 비트 배열로 표현함으로써 필요한 저장 공간을 상당히 줄일 수 있다. 다시 말해, $2^{32}$비트의 배열을 할당한 뒤, 이 배열을 0으로 초기화하고, 해당 IP 주소에 상응하는 배열의 인덱스를 1로 표기한다. 그 다음에 비트 배열을 순회하면서 0으로 세팅된 IP 주소를 찾는다. $2^{32} \approx 4 * 10^9$개의 IP 주소가 존재할 수 있으므로 파일에는 빠진 IP 주소가 있다. 필요한 저장 공간은 $2^{32} / 8$바이트, 즉 0.5기가바이트 정도가 된다. 하지만 이 방법 또한 저장 공간의 한도를 조금 초과한다.
+
+입력으로 주어진 파일을 여러 번 읽어도 된다. 파일을 읽을 때마다 다음과 같이 탐색할 IP 주소의 부분집합을 줄여 나가 보자. 먼저 파일을 한 번 읽으면서 1로 시작하는 IP 주소와 0으로 시작하는 IP 주소의 개수를 센다. 적어도 파일에 빠져 있는 IP 주소가 하나 이상이므로, 둘 줄 하나의 개수는 $2^{31}$보다 적을 것이다. 예를 들어, 이 방법을 통해 팡리에 빠져 있는 IP 주소가 0으로 시작한다는 사실을 알아냈다고 가정해 보자. 그 다음에는 0으로 시작하는 IP 주소에 초점을 맞춘 뒤, 두 번째 비트에 대해서도 같은 방식으로 빠진 IP 주소를 찾아낼 수 있다. 정수값 변수 두 개를 통해 이와 같은 방식으로 32번 파일을 읽으면 빠진 IP 주소를 찾을 수 있다.
+
+저장 공간을 더 사용하면 더 많은 비트에 대해 이 방식을 적용해 볼 수 있다. 즉, 크기가 $2^{16}$인 32비트 정수 배열을 사용해서 IP 주소가 0, 1, 2, ..., $2^{16} - 1$로 시작하는 개수를 각각 저장한다. 파일의 모든 IP 주소에 대해 IP 주소의 16MSB(Most significant bit, 최상위 비트)를 배열의 인덱스로 사용해서 해당 IP 주소의 등장 횟수를 센다. 이를 통해 해당 16MSB로 시작하는 IP 주소 중에서 파일에 들어 있지 않은 IP 주소의 그룹을 찾는다. 그 다음 파일을 읽을 떄에는, 크기가 $2^{16}$인 비트 배열을 사용해서 빠진 주소를 찾으면 된다.
+
+```java
+private static final int NUM_BUCKET = 1 << 16;
+
+public static int findMissingElement(Iterable<Integer> sequence) {
+    int[] counter = new int[NUM_BUCKET];
+    Iterator<Integer> s = sequence.iterator();
+
+    while (s.hasNext()) {
+        int idx = s.next() >>> 16;
+        ++counter[idx];
+    }
+
+    for (int i = 0; i < counter.length; ++i) {
+        // 원소의 개수가 NUM_BUCKET보다 적은 버킷을 찾는다.
+        if (counter[i] < NUM_BUCKET) {
+            BitSet vitVec = new BitSet(NUM_BUCKET);
+            s = sequence.iterator(); // 처음부터 다시 탐색한다.
+            while (s.hasNext()) {
+                int x = s.next();
+                if (i == (x >>> 16)) {
+                    bitVec.set(((NUM_BUCKET)-1) & x); // x의 하위 16비트를 구한다.
+                }
+            }
+
+            for (int j = 0; j < (1 << 16); ++j) {
+                if (!bitVec.get(j)) {
+                    return (i << 16) | j;
+                }
+            }
+        }
+    }
+}
+```
+
+카운트에 사용되는 배열의 크기만큼 추가 공간이 필요하다. 4바이트 원소가 $2^{16}$개 사용되므로, 약 0.25메가바이트다. 필요한 추가 공간은 배열의 크기, 즉 4바이트 원소 $2^{16}$개, 즉 0.25메가바이트 정도 된다.
