add java epi 11.10

--- a/java_epi/ch11/11.탐색.md
+++ b/java_epi/ch11/11.탐색.md
@@ -560,3 +560,82 @@ public static int findMissingElement(Iterable<Integer> sequence) {
 ```
 
 카운트에 사용되는 배열의 크기만큼 추가 공간이 필요하다. 4바이트 원소가 $2^{16}$개 사용되므로, 약 0.25메가바이트다. 필요한 추가 공간은 배열의 크기, 즉 4바이트 원소 $2^{16}$개, 즉 0.25메가바이트 정도 된다.
+
+## 문제 11.10 중복된 원소와 빠진 원소 찾기
+
+배열에 0부터 n-1 사이의 값이 n-1개 들어 있고 배열에 중복된 숫자가 없다면, 0에서 n-1 사이의 숫자 중에서 정확히 하나의 숫자가 빠져 있다는 말이다.
+
+원소의 합을 ㅌ오해 빠진 숫자를 $O(n)$ 시간과 $O(1)$ 공간에 찾을 수 있다. 0부터 n-1까지 숫자의 합은 $(n-1)n/2$이므로, 이 값에서 배열에 있는 숫자의 전체 합을 빼면 빠진 숫자가 된다.
+
+예를 들어 배열이 <5,3,0,1,2>라면, n=6이 된다. 5(6)/2=15에서 (5+3+0+1+2)=11을 빼면 4가 나오는데, 이 값이 배열에서 빠진 숫자이다.
+
+이와 비슷하게 배열에 0부터 n-1 사이의 숫자가 n+1개 들어 있다면, 정확히 한 원소가 두 번 등장한 것이므로 중복된 숫자는 배열의 전체 합에서 (n-1)n/2을 뺀 것과 같다.
+
+다른 방법도 있다. 첫 번째 문제에서 0에서 n-1 사이의 숫자와 배열의 모든 숫자를 모두 XOR함으로써 빠진 숫자를 찾는다. 빠진 원소를 제외한 모든 원소는 상쇄되어 없어지므로, XOR을 한 결과는 빠진 원소가 된다. 중복된 원소를 찾을 때도 같은 방법을 사용할 수 있다. 예를 들어, 배열 <5,3,0,1,2>를 이진수로 표현하면 <(101)_2, (011)_2, (000)_2, (001)_2, (010)_2>이 된다. 이들을 모두 XOR하면 (101)_2이 된다. 0부터 5까지의 숫자를 모두 XOR하면 (001)_2이 된다. (101)_2와 (001)_2을 XOR하면 빠진 원소인 (100)_2 = 4가 된다.
+
+좀 더 어렵고 복잡한 상황을 고려해 보자.
+
+0부터 n-1 사이의 숫자 n개가 들어 있는 배열이 주어졌을 때, 정확히 하나의 원소가 두 번 등장했다고 가정하자. 즉, 0부터 n-1 사이의 원소 하나는 빠졌다는 뜻이 된다. 여기서 중복된 원소와 빠진 원소를 어떻게 구할 수 있을까?
+
+> 힌트: 배열을 여러 번 읽는 방법을 생각해 보라.
+
+무식한 방법은 해시 테이블에 배열의 값을 넣는 것이다. 두 번 들어간 값이 중복된 값이다. 0부터 n-1까지의 숫자가 해시 테이블에 들어 있는지 하나씩 확인하면서 빠진 숫자를 찾을 수도 있다. 시간 복잡도 및 공간 복잡도는 $O(n)$이다. 사전에 배열에 정렬해 놓으면 공간 복잡도를 $O(1)$로 줄일 수 있다. 연속된 원소를 비교하면서 중복된 값과 빠진 값을 쉽게 찾을 수 있기 때문이다. 하지만 이 방법의 시간 복잡도는 $O(n log n)$으로 증가한다.
+
+숫자를 개별적으로 다룰 게 아니라, 배열 내부의 숫자라는 집합적 특성에 초점을 맞추면 구체적인 수식 적용이 가능하다. 예를 들어, 두 번 등장한 원소를 t라고 하고, 빠진 원소를 m이라 하자. 0부터 n-1까지의 합은 (n-1)n/2이므로 배열에 있는 원소의 합은 (n-1)n/2 + t - m이 된다. t와 m은 미지수이므로, 이 수식을 풀기 위해선 독립적인 수식 하나가 더 필요하다.
+
+원소의 곱이나 제곱의 합을 이용한 수식을 사용해 볼 수 있지만, 이들은 쉽게 오버플로가 발생하기 때문에 그다지 만족스런 수식은 아니다.
+
+이 문제의 초반부에 XOR를 사용해서 빠진 숫자를 찾는 방법을 소개했다. 이 방법을 지금 문제에 적용해 보자. 예를 들어 0부터 n-1까지의 값과 배열에 있는 원소를 모두 XOR하면 $m \oplus t$가 된다. m과 t를 모두 알아야 하기 때문에 이 식이 그다지 유용해 보이지 않는다. $m \neq t$이므로 이 둘은 적어도 비트 하나가 다르고, 따라서 $m \oplus t$에는 반드시 1로 세팅된 비트가 존재한다는 사실은 알 수 있다. 예를 들어 $(01101)_2$과 $(11100)_2$를 XOR하면 $(10001)_2$이 된다. XOR에서 1로 세팅된 부분은 정확히 $(01101)_2$과 $(11100)_2$에서 비트가 다른 부분과 같다.
+
+이를 통해 0에서 n-1 사이의 숫자의 부분집합 중에서 m 혹은 t 중에 정확히 하나가 존재하는 부분집합을 찾을 수 있다. 예를 들어 m과 t의 k번째 비트가 다르다고 가정하자. 0에서 n-1 사이의 숫자 중에서 k번째 비트가 1인 숫자와 배열의 숫자 중에서 k번째 비트가 1인 숫자들은 XOR한 결과를 h라고 가정하자. 문제에 언급한 논리에 따르면 h는 m 혹은 t 중의 하나가 된다. 그 다음 배열을 다시 훑으면서 h가 중복된 원소인지 빠진 원소인지를 찾으면 된다.
+
+예를 들어 배열이 <5,3,0,3,1,2>이면 중복된 원소 t는 3, 빠진 원소 m은 4가 된다. 이를 이진 배열로 표현하면 <$(101)_2$, $(011)_2$, $(000)_2$, $(011)_2$, $(001)_2$, $(010)_2$>이 된다. 이들을 XOR하면 $(011)_2$이 된다. 0부터 5까지의 숫자 중에서 최하위 비트가 1인 숫자는 $(001)_2$, $(011)_2$, $(101)_2$이고, 배열에서 최하위비트가 1인 숫자는 $(101)_2$, $(011)_2$, $(011)_2$, $(001)_2$이다. 이들을 모두 XOR하면 $(011)_2$이 된다. 따라서 $(011)_2$ = 3은 배열에서 빠진 숫자 혹은 중복된 숫자가 된다. 배열을 다시 한번 훑으면 해당 숫자가 중복된 숫자라는 사실을 알 수 있다. 이제 $(011)_2$과 배열의 원소들, 0부터 5까지의 숫자를 모두 XOR하면 $(100)_2$ = 4가 되고, 이 값이 바로 배열에서 빠진 숫자가 된다.
+
+```java
+private static class DuplicateAndMissing {
+    public Integer duplicate;
+    public Integer missing;
+
+    public DuplicateAndMissing(Integer duplicate, Integer missing) {
+        this.duplicate = duplicate;
+        this.missing = missing;
+    }
+
+    public static DuplicateAndMissing findDuplicateMissing(List<Integer> A) {
+        // 0부터 |A| - 1까지의 숫자와 A에 있는 모든 숫자의 XOR을 계산한다.
+        int missXORDup = 0;
+        for (int i = 0; i < A.size(); ++i) {
+            missXORDup ^= i ^ A.get(i);
+        }
+
+        // missXORDup에서 1로 세팅된 비트를 찾는다.
+        // 배열 A에 있는 숫자들 중에 빠진 숫자와 중복된 숫자가 하나씩 있다고 하면
+        // 1로 세팅된 비트는 반드시 존재한다.
+        //
+        // 다음 수식은 missXORDup에서 1로 세팅된 최하위 비트를 제외한
+        // 나머지 비트를 differBit에서 모두 0으로 세팅한다.
+        int differBit = missXORDup & (~(missXORDup - 1));
+        int missOrDup = 0;
+        for (int i = 0; i < A.size(); ++i) {
+            // differBit의 위치에 있는 비트가 1인 모든 숫자와 원소에 초점을 맞춘다.
+            if ((i & differBit) != 0) {
+                missOrDup ^= i;
+            }
+            if ((A.get(i) & differBit) != 0) {
+                missOrDup ^= A.get(i);
+            }
+        }
+
+        // missOrDup은 빠진 원소 혹은 중복된 원소 중 하나이다.
+        for (int a : A) {
+            if (a == missOrDup) { // missOrDup은 중복된 원소이다.
+                return new DuplicateAndMissing(missOrDup, missOrDup ^ missXORDup);
+            }
+        }
+        // missOrDup은 빠진 원소이다.
+        return new DuplicateAndMissing(missOrDup ^ missXORDup, missOrDup);
+    }
+}
+```
+
+시간 복잡도는 $O(n)$이고, 공간 복잡도는 $O(1)$이다.
