--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -34,7 +34,46 @@ public static int stringHash(String str, int modulus) {
 
 두 가지 예제를 통해 해시 테이블을 소개할 것이다. 하나는 애플리케이션에서 해시 테이블을 사용하여 알고리즘을 개선하는 경우고, 다른 하나는 클래스 설계에 관한 내용이다.
 
- 
+## 해시 테이블을 사용하는 애플리케이션
+
+철자 바꾸는 놀이(anagram)는 일반적인 단어 퍼즐 중 하나이다. 단어 집합이 주어지면 철자의 순서를 바꿔서 새로운 단어 집합을 만드는 놀이이다. 예를 들어 "eleven plus two"의 철자를 바꾸면 "twelve plus one"이 된다. 스크래블이나 가로세로 퍼즐 맞추기를 좋아하는 사람이라면 주어진 문자 집합에서 바꾸어 볼 수 있는 모든 가능한 철자를 남들보다도 쉽게 찾을 수 있을 것이다.
+
+단어 집합을 입력으로 받은 후 철자를 바꾸어 다른 단어가 될 수 있는 것들끼리 그룹으로 묶고, 그 그룹을 반환하는 프로그램을 작성해 보자. 각 그룹에는 적어도 두 단어 이상이 들어 있어야 한다.
+
+예를 들어 입력이 "debitcard", "elvis", "silent", "badcredit", "lives", "freedom", "listen", "levis", "money"라면, 다음과 같은 세 개의 그룹이 나올 수 있다. (1) "debitcard", "badcredit", (2) "elvis", "lives", "levis", (3) "silent", "listen". ("money"는 철자를 바꾸어 만들 수 있는 다른 단어가 없으므로 어떤 그룹에도 속하지 않는다.)
+
+먼저 두 개의 단어가 주어졌을 때, 한 단어의 철자를 바꾸어 다른 단어로 만들 수 있는지 확인하는 프로그램을 생각해 보자. 문자열에 등장하는 문자의 순서는 전혀 관계 없으므로, 각 문자열을 기준으로 정렬한 뒤에 둘을 비교해 볼 수 있다. 두 단어의 정렬 결과가 동일하다면, 이 둘은 철자를 재배치해서 서로를 만들 수 있다. 예를 들어 "logarithmatic"과 "algorithmic"을 정렬하면 둘 다 "acghiilmort"가 된다.
+
+이중 루프를 사용해 모든 문자열의 쌍을 비교하는 식으로 그룹을 만들 수도 있다. 철자를 바꾸어 서로 다른 문자열을 만들 수 있다면, 두 번째 문자열은 다시 고려하지 않는다. 전체 문자열이 n개이고 최대 문자열의 길이가 m일 때 이 알고리즘의 시간 복잡도는 $O(n^2m \log m)$이 된다.
+
+이 방법을 좀 더 자세히 살펴보자. 여기서 중요한 점은 어떤 문자열을 또 다른 대표 문자열로 매핑한다는 점이다. 즉, 임의의 문자열이 주어졌을 때, 이 문자열을 정렬한 문자열이 해당 그룹을 대표하는 고유한 식별자가 된다. 우리가 원하는 것은 정렬된 문자열과 이 문자열의 대표 문자열을 매핑시키는 것이다. 문자열 집합을 저장할 때는 해시 테이블을 사용하는 것이 좋다. 따라서 모든 문자열 s에 대해 sort(s)를 해시 테이블에 추가한다. 정렬된 문자열이 키값이 되고, 입력으로 주어진 문자열 리스트가 값이 된다.
+
+```java
+public static List<List<String>> findAnagrams(List<String> dictionary) {
+    Map<String, List<String>> sortedStringToAnagrams = new HashMap<>();
+    for (String s : dictionary) {
+        // 문자열을 정렬한 뒤, 이 정렬된 문자열을 키값으로 사용한다.
+        // 그 뒤에 기존 문자열을 해시 테이블의 값에 추가한다.
+        char[] sortedCharArray = s.toCharArray();
+        Arrays.sort(sortedCharArray);
+        String sortedStr = new String(sortedCharArray);
+        if (!sortedStringToAnagrams.containsKey(sortedStr)) {
+            sortedStringToAnagrams.put(sortedStr, new ArrayList<String>());
+        }
+        sortedStringToAnagrams.get(sortedStr).add(s);
+    }
+
+    List<List<String>> anagramGroups = new ArrayList<>();
+    for (Map.Entry<String, List<String>> p : sortedStringToAnagrams.entrySet()) {
+        if (p.getValue().size() >= 2) { // 그룹을 찾았다.
+            anagramGroups.add(p.getValue());
+        }
+    }
+    return anagramGroups;
+}
+```
+
+이 방법은 정렬 알고리즘을 n번 호출하고 해시 테이블에 n번 삽입한다. 모든 키를 정렬하려면 $O(nm \log m)$ 시간 복잡도가 필요하고, 삽입을 하는 데 $O(nm)$ 시간이 걸리므로, 전체 시간 복잡도는 $O(nm \log m)$이 된다.
 
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
