update java epi 12

--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -75,6 +75,69 @@ public static List<List<String>> findAnagrams(List<String> dictionary) {
 
 이 방법은 정렬 알고리즘을 n번 호출하고 해시 테이블에 n번 삽입한다. 모든 키를 정렬하려면 $O(nm \log m)$ 시간 복잡도가 필요하고, 삽입을 하는 데 $O(nm)$ 시간이 걸리므로, 전체 시간 복잡도는 $O(nm \log m)$이 된다.
 
+## 해시 테이블 클래스 설계하기
+
+핸드폰의 연락처를 표현하는 클래스를 생각해 보자. 문제를 간단히 하기 위해 각 연락처는 문자열 하나로만 이루어져 있고, 리스트에 들어 있다고 가정하자. 또한 같은 연락처가 중복되어 저장될 수 있다. 만약 두 연락처 클래스의 내부 리스트가 순서에 상관 없이 같은 문자열을 가지고 있다면 두 연락처 클래스는 동일하다고 볼 수 있다. 중복 여부는 중요하지 않다. 즉, 똑같은 연락처가 리스트에 세 번 중복해서 들어 있는 것과 해당 연락처가 리스트에 한 번 들어간 것은 모두 동일하게 다룬다. 연락처를 해시 테이블에 저장하기 위해서는 먼저 동등성(equality)을 정의해야 된다. 그래야 리스트의 집합을 표현할 수 있고, 집합끼리 비교를 할 수 있다.
+
+이 경우에 해시 함수는 문자열의 순서가 아니라 문자열의 존재 유무에 따라 값으로 표현되어야 한다. 또한 동일한 연락처가 여러 개 존재하더라도 하나 있을 때와 결괏값이 동일해야 한다. 리스트를 집합으로 표현한 뒤, 집합에 대해서 해시 함수를 호출하면 가능하다. 집합에 대한 해시 함수 라이브러리는 순서에 독립적이고 집합에 대해선 자동으로 중복을 방지하므로, 우리가 원하는 해시 함수와 같다. 다음 코드에 나오는 해시 함수와 동등성 함수는 굉장히 비효율적이다. 실무에서는 집합과 해시 코드를 캐시에 저장하는 게 좋다. 단, 캐시를 사용할 때에는 갱신할 때마다 해당 값을 삭제해야 한다는 사실을 명심하라.
+
+```java
+public static List<ContactList> mergeContactLists(List<ContactList> contacts) {
+    return new ArrayList<>(new HashSet(contracts));
+}
+
+public static class ContactList {
+    public List<String> names;
+
+    ContactList(List<String> names) { this.names = names; }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (obj == null || !(obj instanceof ContactList)) {
+            return false;
+        }
+        return this == obj
+            ? true
+            : new HashSet(names).equals(new HashSet(((ContactList)obj).names));
+    }
+
+    @Override
+    public int hashCode() {
+        return new HashSet(names).hashCode();
+    }
+}
+```
+
+연락처 리스트에 n개의 문자열이 들어 있을 때 해시 값을 계산하려면 $O(n)$시간이 걸린다. 성능 향상을 위해 해시 코드를 캐시에 저장해도 된다. 단, 이때 해시 함수가 가리키는 객체가 갱신됐을 때 해당 캐시를 반드시 비워야 한다.
+
+## 해시 테이블 문제를 풀기 전 꼭 알고 있어야 할 내용
+
+- 해시 테이블은 `이론에서뿐 아니라 실무에서도` 탐색(lookup), 삽입(insert), 삭제(delete) 연산에 대해 최고의 성능을 나타낸다. 각 연산의 시간 복잡도는 $O(1)$이다. 삽입에 대한 $O(1)$ 시간 복잡도는 평균 시간 복잡도이다. 해시 테이블의 크기를 조정할 때 단일 삽입 연산은 $O(n)$ 시간이 걸릴 수 있다. [문제 12.2]
+- 후보자를 걸러 내는 등의 상황에서 성능을 향상하고 싶다면 `해시 코드`를 사용해 볼 수 있다. [문제 12.12]
+- 예를 들어 문자에서 값으로 혹은 문자에서 문자로의 매핑일 경우 if-then 코드를 나열해서 하나씩 매핑하기보단 룩업테이블을 미리 만들어 두는 게 좋다. [문제 6.9]
+- 자신이 만든 자료형을 해시 테이블에 삽입할 때, `논리적 동등성`과 해시 함수가 사용하게 될 필드의 관계를 이해하고 있어야 한다. 특히, 해당 자료형의 동등성을 구현하고자 할 때는 반드시 올바른 해시 함수가 구현되어 있어야 한다. 그렇지 않으면 해당 객체를 해시 함수에 삽입할 때 논리적으로 동일한 두 객체가 다르게 구분될 수도 있다. 이러면 해당 객체가 해시 테이블에 들어 있더라도 탐색에 실패할 수 있다.
+- 종종 하나의 키가 하나 이상의 값에 매핑되는 멀티맵(multimap)을 사용할 때가 있다. 만약 지금 사용하는 언어에서 멀티맵에 대한 표준 라이브러리를 제공하지 않는다면, 리스트를 사용해서 멀티맵을 구현해야 한다. 혹은 멀티맵 라이브러리를 제공하는 `외부 라이브러리`를 찾아야 한다.
+
+## 해시 테이블 라이브러리 이해하기
+
+HashSet과 HashMap은 자바에서 흔하게 사용하는 해시 테이블 기반 자료구조이다. HashMap은 키와 값의 쌍을 저장하는 데 반해 HashSet는 키만 저장한다는 점이 다르다. 이 둘 모두 LinkedList나 PriorityQueue와는 다르게, 중복된 키를 저장할 수 없다. 기술적으로 HashSet는 Set 인터페이스를 구현하였고, HashMap은 Map 인터페이스를 구현했다.
+
+HashSet에서 가장 중요한 메서드는 Set에 정의되어 있는 add(144), remove("Cantor"), contains(24), iterator(), isEmpty(), size()가 있다. add(144)와 remove("Cantor") 모두 추가/삭제가 제대로 되었는지 확인할 수 있는 불값을 반환한다. null 또한 유효한 값이 될 수 있다는 사실을 명심하라.
+
+- iterator()로 모든 키를 순회할 때, 키의 순서가 정해져 있지 않다. 심지어 시간에 따라 그 순서가 바뀔 수도 있다. LinkedHashSet 클래스는 HashSet의 하위 클래스지만, iterator()가 반환하는 키의 순서가 집합에 삽입된 순서와 같다는 점이 다르다. 이 순서는 s.contains(x)가 참일 때, s.add(x)를 다시 호출해서 원소를 재삽입하더라도 바뀌지 않는다.
+- HashSet에는 교집합을 찾을 때 사용하는 retainAll(C) 메서드가 구현되어 있기 때문에 손으로 처음부터 구현할 필요가 없다. 이와 연관된 메서드로는 removeAll(C)가 있다.
+
+HashMap에서 가장 중요한 메서드로는 Map에 정의되어 있는 put('z', 26), get("Hardy"), remove('z'), containsKey("Hardy")가 있다.
+
+- entrySet(), keySet(), values()와 같이 반복자와 연관된 다양한 메서드가 존재한다. 정적 내부 클래스(static inner class) Map.Entry는 키와 값의 쌍을 순회하는 데 사용되곤 한다. 순회하는 순서가 정해져 있지는 않지만, 무엇을 기준으로 순회하든 그 순서는 동일하다.
+- 정해진 순서대로 순회하고 싶을 때는 LinkedHashMap을 사용하면 된다. LinkedHashMap은 LinkedHashSet보다 조금 더 복잡하다. 예를 들어 삽입된 순서대로 순회가 진행되도록 할 수도 있고, 원소에 접근한 순서대로 (즉, get(42)를 호출하는 순간 해당 원소의 순서가 앞으로 당겨진다.) 순회를 진행할 수도 있다. LinkedHashMap에서는 공간의 크기를 한정시킬 수 있고, LRU를 통한 원소 삭제 정책을 적용할 수도 있다.
+
+Objects 클래스는 몇 가지 정적 메서드를 제공하는데, 이들은 equals(obj)나 hashCode()를 작성해야 하는 부담을 상당히 줄여 준다. 예를 들어 Objects.equals(x, y), Objects.deepEquals(A, B), Objects.hash(42, "Douglas Adams", 3.14, new Date())와 같은 메서드들이 있다.
+
+```text
+보통 두 객체의 비교를 동일성(identity) 비교와 동등성(equality) 비교로 구분한다. 동일성 비교는 참조 주소를 비교하는 것으로 == 연산자를 사용하고, 동등성 비교는 두 객체가 같다고 논리적으로 인정할 수 있는, 예를 들면 id나 name 등을 비교하는 것으로 equals()를 사용한다.
+```
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
