--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -138,6 +138,39 @@ Objects 클래스는 몇 가지 정적 메서드를 제공하는데, 이들은 e
 보통 두 객체의 비교를 동일성(identity) 비교와 동등성(equality) 비교로 구분한다. 동일성 비교는 참조 주소를 비교하는 것으로 == 연산자를 사용하고, 동등성 비교는 두 객체가 같다고 논리적으로 인정할 수 있는, 예를 들면 id나 name 등을 비교하는 것으로 equals()를 사용한다.
 ```
 
+## 문제 12.1 회문 순열 확인하기
+
+회문이란 "level", "rotator", "foobaraboof"처럼 앞으로 읽을 때와 뒤로 읽을 때가 같은 문자열을 말한다.
+
+문자열을 구성하는 문자를 재배치해서 회문을 만들 수 있는지 확인하는 프로그램을 작성하라. 예를 들어 "edified"는 "deified"로 재배치가 가능하다.
+
+> 힌트: 문자열의 문자들을 간단하게 재배치해서 회문으로 만들 수 있는지 확인해 보자.
+
+무식한 방법 중 하나는 문자열의 모든 순열을 구한 뒤에 각각이 회문인지 확인하는 것으로 시간 복잡도가 굉장히 높다. 그런데 이 방법을 좀 더 자세히 살펴보면 'a'로 시작하는 문자열이 회문이 되려면, 'a'로 끝나야 한다는 사실을 알 수 있다. 이 사실을 이용해 무식한 방법을 조금 개선해 보자. 어떤 문자열이 회문이 되려면 (길이가 홀수인 경우에 가운데 문자를 제외한) 모든 문자가 쌍을 이루어야 한다. 예를 들어 "edified"의 길이는 홀수(7)이고, 'e', 'd', 'i'가 두 개씩 있고, 'f'가 한 개 있다. 따라서 "edified"의 순열 중에 회문이 존재한다는 사실을 알 수 있다.
+
+좀 더 수학적으로 말해 보자. 길이가 짝수인 문자열이 회문이 되기 위한 필요충분조건은 문자열을 구성하는 모든 문자의 개수가 짝수여야 한다는 것이다. 만약 문자열의 길이가 홀수라면, 문자 하나를 제외한 모든 문자의 개수가 짝수여야 한다. 따라서 두 경우 모두, 홀수 번 나타나는 문자가 1개인지 확인하면 된다. 이는 해시 테이블을 통해 문자와 해당 문자의 등장 횟수를 매핑하는 방법으로 확인할 수 있다.
+
+```java
+public static boolean canFormPalindrome(String s) {
+    Set<Character> charsWithOddFrequency = new HashSet<>();
+    for (int i = 0; i < s.length(); i++) {
+        char c = s.charAt(i);
+        if (charsWithOddFrequency.contains(c)) {
+            // c는 이제 짝수 번 나타났다.
+            charsWithOddFrequency.remove(c);
+        } else {
+            // c는 이제 홀수 번 나타났다.
+            charsWithOddFrequency.add(c);
+        }
+    }
+
+    // 홀수 번 나타난 문자가 최대 1인 경우에만 문자열을 치환하여 회문을 만들 수 있다.
+    return charsWithOddFrequency.size() <= 1;
+}
+```
+
+문자열의 길이가 n일 때 시간 복잡도는 $O(n)$이 된다. 문자열을 구성하는 서로 다른 문자의 개수가 c일 떄 공간 복잡도는 $O(c)$가 된다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
