add java epi 12.2

--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -171,6 +171,53 @@ public static boolean canFormPalindrome(String s) {
 
 문자열의 길이가 n일 때 시간 복잡도는 $O(n)$이 된다. 문자열을 구성하는 서로 다른 문자의 개수가 c일 떄 공간 복잡도는 $O(c)$가 된다.
 
+## 문제 12.2 익명의 편지 작성하기
+
+익명의 편지 텍스트와 잡지 텍스트가 주어졌을 때 해당 잡지를 사용해서 익명의 편지를 작성할 수 있는지 확인하는 프로그램을 작성하라. 익명의 편지를 쓰는 데 필요한 각각의 문자 개수가 잡지에 등장하는 문자의 개수보다 적다면, 잡지를 사용하여 익명의 편지를 작성할 수 있다.
+
+> 힌트: 편지에 등장하는 서로 다른 문자의 개수를 세어 보라.
+
+무식한 방법으로 생각해 보자. 일단 모든 문자에 대해 편지와 잡지에 등장하는 문자의 개수를 센다. 만약 어떤 문자가 잡지보다 편지에 더 많이 등장한다면 false를 반환하고, 그렇지 않으면 true를 반환한다. 언뜻 생각해 봐도 이 방법은 느릴 수밖에 없다. 왜냐하면 편지나 잡지에 등장하지 않는 문자에 대해서도 모두 확인해야 하기 때문이다. 또한 이 방법은 문자 집합에 포함된 문자의 개수만큼 편지와 잡지를 여러 번 읽어야 한다.
+
+이보다 더 나은 방법은 편지를 기준으로 편지에 등장하는 문자와 그 횟수를 해시 테이블에 저장하는 것이다. 여기서 키는 문자가 되고, 값은 해당 문자가 등장한 횟수가 된다. 그다음 잡지를 한 번 읽는다. 잡지에 어떤 문자 c가 등장했고, c가 해시 테이블에 있다면 횟수를 1만큼 감소시킨다. 값이 0이 되는 순간 해당 문자를 해시 테이블에서 삭제한다. 최종적으로 해시 테이블이 비어 있다면 true를 반환한다. 만약 해시가 비어 있지 않다면, 해당 문자를 잡지에 등장한 횟수보다 많다는 뜻이기 때문에 false를 반환한다.
+
+```java
+public static boolean isLetterConstructibleFromMagazine(String letterText, String magazineText) {
+    Map<Character, Integer> charFrequencyForLetter = new HashMap<>();
+    // letterText에 등장한 모든 문자의 횟수를 계산한다.
+    for (int i = 0; i < letterText.length(); i++) {
+        char c = letterText.charAt(i);
+        if (!charFrequencyForLetter.containsKey(c)) {
+            charFrequencyForLetter.put(c, 1);
+        } else {
+            charFrequencyForLetter.put(c, charFrequencyForLetter.get(c) + 1);
+        }
+    }
+
+    // magazineText에 등장한 문자가 letterText에 등장한 모든 문자를
+    // 포함할 수 있는지 확인한다.
+    for (char c : magazineText.toCharArray()) {
+        if (charFrequencyForLetter.containsKey(c)) {
+            charFrequencyForLetter.put(c, charFrequencyForLetter.get(c) - 1);
+            if (charFrequencyForLetter.get(c) == 0) {
+                charFrequencyForLetter.remove(c);
+                // letterText의 모든 문자를 사용했다.
+                if (charFrequencyForLetter.isEmpty()) {
+                    break;
+                }
+            }
+        }
+    }
+    // charFrequencyForLetter가 비어 있다는 건 letterText의 모든 문자를
+    // magazineText에 등장한 모든 문자로 대체할 수 있다는 뜻이다.
+    return charFrequencyForLetter.isEmpty();
+}
+```
+
+최악의 경우는 편지를 작성할 수 없거나 잡지의 마지막 문자가 필요한 경우일 것이다. 따라서 편지의 길이가 m, 잡지의 길이가 n일 때 시간 복잡도는 $O(m+n)$이다. 공간 복잡도는 편지를 읽으면서 만든 해시 테이블의 크기와 같으므로, 편지에 등장한 서로 다른 문자의 개수가 L일 떄 공간 복잡도는 $O(L)$과 같다.
+
+만약 문자가 ASCII로 구성되어 있다면, 해시 테이블 대신에 길이가 256인 정수 배열 A를 사용해도 된다. A[i]는 문자 i가 편지에 등장한 횟수와 같다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
