add java epi 12.3"

--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -218,6 +218,64 @@ public static boolean isLetterConstructibleFromMagazine(String letterText, Strin
 
 만약 문자가 ASCII로 구성되어 있다면, 해시 테이블 대신에 길이가 256인 정수 배열 A를 사용해도 된다. A[i]는 문자 i가 편지에 등장한 횟수와 같다.
 
+## 문제 12.3 ISBN 캐시 구현하기
+
+국제 표준 도서 번호(ISBN)는 국제적으로 표준화된 방법에 따라 전세계에서 생산되는 도서에 부여된 고유번호이다. 길이가 10인 문자열로, 첫 아홉 개 문자는 숫자로 구성되어 있고, 마지막 문자는 확인용 문자로 구성되어 있다. 확인용 문자는 첫 아홉 개의 숫자를 합하여 11로 나눈 나머지와 같으며 이 값이 10인 경우에는 'X'로 표기한다. (현대 ISBN은 13자리를 사용하고 확인용 숫자는 10으로 나눈 나머지를 사용한다. 여기서는 10자리 ISBN에 대해서 다룬다.)
+
+ISBN으로 책의 가격을 찾는 캐시를 만들라. 탐색, 삽입, 삭제 메서드를 구현해야 한다. 캐시의 원소는 LRU(가장 최근에 사용된) 정책을 사용해서 삭제하라. 이미 존재하는 ISBN에 대해선, 삽입을 하더라도 가격이 변하면 안 된다. 하지만 캐시 정책에 따라 해당 원소를 가장 최근에 사용한 원소로 갱신해야 한다. 원소를 탐색한 경우도 해당 원소를 가장 최근에 사용한 원소로 갱신해 줘야 한다.
+
+> 힌트: 삭제 비용을 분할 상환으로 계산하라. 여분의 자료구조를 사용해도 된다.
+
+해시 테이블은 빠르게 탐색하는 것이 목적이다. 해시 테이블을 사용하면 ISBN의 키값을 통해 빠르게 가격을 확인할 수 있다. 각 키에 상응하는 값은 해당 책의 가격과 가장 최근에 해당 키에 접근한 시간을 기록한다.
+
+이 방법으로 캐시를 탐색한다면 $O(1)$ 시간이 걸린다. 캐시가 꽉 차기 전까지 삽입 연산 또한 $O(1)$이 소요된다. 캐시가 꽉 찼다면, LRU에 해당하는 원소를 찾아서 삭제한 뒤 해당 위치에 새로운 원소를 삽입해야 한다. 캐시의 크기가 n일 때, 해당 원소를 찾는 데 걸리는 시간은 $O(n)$이다.
+
+성능을 개선할 수 있는 방법 중 하나는 게으른 가비지 컬렉션(lazy garbage collection)을 이용하는 것이다. 크기가 n인 캐시가 있을 때, 이 해시 테이블의 크기가 2n으로 늘어나기 전까지 어떤 원소도 삭제하지 않는다. 테이블이 꽉 차서 해시 테이블의 크기를 늘려야 하는 시점이 되면, 해시 테이블을 전부 순회하면서 원소가 삽입된 시간의 중앙값을 찾는다. 그다음 이 중앙값보다 오래된 원소는 모두 삭제한다. 최악의 경우에 $O(n)$ 시간이 걸리지만, 삭제 연산은 n번 수행할 때마다 많아야 한 번 발생한다. 따라서 삭제 연산의 분할 상환 시간 복잡도는 $O(1)$이 된다. 이 방법의 단점은 캐시가 꽉 차 있는 순간에 탐색해서 캐시 미스(cache miss)가 난다면, 해당 연산에 대해 $O(n)$ 시간이 걸리고, 메모리는 $O(n)$만큼 증가한다는 것이다.
+
+키값을 큐에 저장하는 방법을 써도 된다. 해시 테이블에 각 키를 저장할 때, 각 키가 큐의 어느 위치에 저장되어 있는지 알기 위해 그 주소를 함께 저장한다. 특정 ISBN이 해시 테이블에 존재할 때, 이 ISBN을 큐의 가장 앞자리로 옮긴다. (큐의 중간에 있는 원소를 앞으로 옮길 수 있어야 하므로 연결리스트를 사용해서 큐를 구현해야 한다.) 캐시에 새로운 원소를 삽입한 뒤 큐의 총 길이가 n을 넘어선다면, 큐의 가장 마지막에 있는 원소를 캐시, 즉 큐와 해시 테이블에서 제거한다.
+
+Java는 LinkedHashMap 클래스를 제공한다. 이 클래스는 HashMap의 하위 클래스이며 삽입 순서를 유지시켜 준다. 즉, LinkedHashMap을 순회하면 키를 방문하는 순서는 삽입된 순서와 같다. 해당 클래스에서 적절한 생성자를 호출한다면, 어떤 엔트리를 읽었을 때 해당 엔트리의 순서를 자동으로 앞으로 옮겨줄 수 있다. 이 클래스를 사용하면 연결리스트를 따로 구현하지 않아도 된다.
+
+```java
+public class LRUCache {
+    LinkedHashMap<Integer, Integer> isbnToPrice;
+
+    LRUCache(final int capacity) {
+        this.isbnToPrice = new LinkedHashMap<Integer, Integer>(capacity, 1.0f, true) {
+            @Override
+            protected boolean removeEldestEntry(Map.Entry<Integer, Integer> e) {
+                return this.size() > capacity;
+            }
+        };
+    }
+
+    public Integer lookup(Integer key) {
+        if (!isbnToPrice.containsKey(key)) {
+            return null;
+        }
+        return isbnToPrice.get(key);
+    }
+
+    public Integer insert(Integer key, Integer value) {
+        // 키값이 존재하지 않는 경우에만 값을 추가한다.
+        // 즉, 이미 존재하는 값을 갱신하지 않는다.
+        Integer currentValue = isbnToPrice.get(key);
+        if (!isbnToPrice.containsKey(key)) {
+            isbnToPrice.put(key, value);
+            return currentValue;
+        } else {
+            return null;
+        }
+    }
+
+    public Integer erase(Object key) {
+        return isbnToPrice.remove(key);
+    }
+}
+```
+
+해시 테이블을 탐색하는 데 필요한 시간 복잡도와 큐를 갱신하는 데 걸리는 시간 복잡도는 모두 $O(1)$이므로, 총 시간 복잡도는 $O(1)$이 된다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
