--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -276,6 +276,42 @@ public class LRUCache {
 
 해시 테이블을 탐색하는 데 필요한 시간 복잡도와 큐를 갱신하는 데 걸리는 시간 복잡도는 모두 $O(1)$이므로, 총 시간 복잡도는 $O(1)$이 된다.
 
+## 문제 12.4 최적화된 최소 공통 조상 찾기
+
+문제 9.4에서는 부모를 참조할 수 있는 이진 트리에서 최적화된 최소 공통 조상(LCA)를 찾았다. 이 문제 해법의 시간 복잡도는 트리의 높이에 비례한다. 문제 9.4의 해법에서 보여 준 알고리즘은 최소 공통 조상을 계산하는 노드가 실제 최소 공통 조상에 매우 근접하더라도 루트까지 모든 경로를 탐색한다.
+
+이진 트리에서 노드 두 개가 주어졌을 때, 이들의 최소 공통 조상을 구하는 알고리즘을 설계하라. 단, 알고리즘의 시간 복잡도는 두 노드에서 최소 공통 조상까지의 거리와 관련되어 있어야 한다.
+
+> 힌트: 극단적인 경우에 초점에 맞춰서 생각해 보라.
+
+무식한 방법은 다음과 같다. 한 노드에서 루트까지 순회하면서 해당 경로에 포함된 노드를 기록한 뒤, 다른 노드에서 다시 루트 방향으로 순회하면서 저장된 노드와 겹치는 노드가 나오는 순간 순회를 멈추면 된다. 이 방법의 문제점은 두 노드가 루트와 상당히 멀리 떨어져 있더라도, 최소한 루트까지 순회를 해야 한다는 것이다. 그림 9.1을 예로 들어보자. 노드 L과 N은 서로 형제 노드라서 부모 노드인 K가 최소 공통 조상이다. 하지만 이 경우에도 루트까지 순회한다.
+
+직관적으로 생각했을 때 무식한 방법은 최소 공통 조상을 찾는 데 필요한 노드보다 더 많은 노드를 처리하므로 차선의(suboptimal) 방법이라고 할 수 있다. 하지만 두 노드에서 번갈아 가면서 위로 올라가고, 방문한 노드를 해시 테이블에 저장하면, 불필요한 노드를 순회하지 않으 수 있다. 단, 노드에 매번 방문할 때마다 해당 노드를 방문했는지 확인해 봐야 한다.
+
+```java
+public static BinaryTree<Integer> LCA(BinaryTree<Integer> node0, BinaryTree<Integer> node1) {
+    Set<BinaryTree<Integer>> hash = new HashSet<>();
+    while (node0 != null || node1 != null) {
+        // 두 노드에서 나란히 트리를 올라간다.
+        if (node0 != null) {
+            if (!hash.add(node0)) {
+                return node0;
+            }
+            node0 = node0.parent;
+        }
+        if (node1 != null) {
+            if (!hash.add(node1)) {
+                return node1;
+            }
+            node1 = node1.parent;
+        }
+    }
+    throw new IllegalArgumentException("node0 and node1 are not in the same tree");
+}
+```
+
+공간을 더 사용했지만, 시간이 줄었다는 점에 주목하자. 문제 9.4의 해법은 $O(1)$ 공간과 $O(h)$ 시간을 사용했다. 반면에 이번에는 $O(D0+D1)$ 공간 및 시간을 사용했다. 여기서 D0은 첫 번째 노드에서 LCA까지의 거리와 같고, D1은 두 번째 노드에서 최소 공통 조상까지의 거리와 같다. 최악의 경우에는 두 노드가 단말 노드이고 최소 공통 조상이 루트인 경우이므로, 트리의 높이를 h라 했을 때 시간 및 공간 복잡도는 $O(h)$이다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
