--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -312,6 +312,36 @@ public static BinaryTree<Integer> LCA(BinaryTree<Integer> node0, BinaryTree<Inte
 
 공간을 더 사용했지만, 시간이 줄었다는 점에 주목하자. 문제 9.4의 해법은 $O(1)$ 공간과 $O(h)$ 시간을 사용했다. 반면에 이번에는 $O(D0+D1)$ 공간 및 시간을 사용했다. 여기서 D0은 첫 번째 노드에서 LCA까지의 거리와 같고, D1은 두 번째 노드에서 최소 공통 조상까지의 거리와 같다. 최악의 경우에는 두 노드가 단말 노드이고 최소 공통 조상이 루트인 경우이므로, 트리의 높이를 h라 했을 때 시간 및 공간 복잡도는 $O(h)$이다.
 
+## 문제 12.5 배열에서 반복되는 가장 가까운 원소 찾기
+
+사람들은 짧은 한 문단에서 같은 단어가 반복되는 걸 선호하지 않는다. 여기서는 주어진 문장에 같은 단어가 반복되는 문제가 있는지 확인하는 프로그램을 작성할 것이다.
+
+배열이 입력으로 주어졌을 때, 반복적으로 나타나는 원소 쌍의 거리 중 가장 가까운 거리를 찾는 프로그램을 작성하라. 예를 들어 s = <"All", "work", "and", "no", "play", "makes", "for", "no", "work", "no", "fun", "and", "no", "results">에서는 두 번 째와 세 번째에 등장한 "no"의 거리가 가장 가까운 쌍이 된다.
+
+> 힌트: 배열의 각 원소를 정답 후보라고 생각해 보자.
+
+무식한 방법은 모든 원소 쌍을 순회하면서 같은 원소의 거리가 가장 짧은 경우를 구하는 것이다. 배열의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n^2)$이다.
+
+이 방법을 개선해 보자. 동일 원소 사이의 거리만 알면 되므로, 이중 루프로 다른 모든 원소를 살펴볼 필요는 없다. 대신, 해시 테이블을 써서 원소가 발견된 인덱스들을 저장해 두면 된다. 하지만 모든 인덱스를 저장할 필요도 없다. 지금 관심 있는 건, 가장 최근 인덱스 하나다. 즉, 배열에서 해당 원소가 등장한 가장 최근의 인덱스를 해시 테이블에 저장한다면, 현재 원소와 같은 원소 중에서 가장 최근에 등장한 인덱스를 쉽게 구할 수 있다.
+
+앞에서 예로 든 s를 다시 한번 살펴보자. 9번 인덱스에 있는 원소 ("no")를 처리하는 시점에서 해시 테이블에 "no"가 등장한 가장 최근의 인덱스는 7이므로, 가장 가까운 원소 쌍의 거리를 2로 갱신한다.
+
+```java
+public static int findNearestRepetition(List<String> paragraph) {
+    Map<String, Integer> wordToLatestIndex = new HashMap<>();
+    int nearestRepeatedDistance = Integer.MAX_VALUE;
+    for (int i = 0; i < paragraph.size(); ++i) {
+        if (wordToLatestIndex.containsKey(paragraph.get(i))) {
+            nearestRepeatedDistance = Math.min(nearestRepeatedDistance, i - wordToLatestIndex.get(paragraph.get(i)));
+        }
+        wordToLatestIndex.put(paragraph.get(i), i);
+    }
+    return nearestRepeatedDistance;
+}
+```
+
+배열의 각 원소에 대해 시간이 상수 시간만큼 걸리므로 전체 시간 복잡도는 $O(n)$이 된다. 배열 안의 서로 다른 원소의 개수를 d라 한다면 공간 복잡도는 $O(d)$가 된다.
+
 ## 문제 12.8 서로 다른 엔트리를 포함하는 가장 긴 부분배열 구하기
 
 배열이 주어졌을 때, 중복된 원소가 없는 가장 긴 부분배열의 길이를 반환하는 프로그램을 작성하라. 예를 들어 <f,s,f,e,t,w,e,n,w,e>가 주어졌을 때, 중복되지 않은 가장 긴 부분배열은 <s,f,e,t,w>가 된다.
