--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -586,3 +586,47 @@ public static int longestSubarrayWithDistinctEntries(List<Integer> A) {
 ```
 
 각 원소를 처리하는 데 상수 시간이 걸리기 때문에 전체 시간 복잡도는 $O(n)$이 된다.
+
+## 문제 12.9 가장 긴 구간의 길이 찾기
+
+정수 배열이 입력으로 주어졌을 때, 다음 조건을 만족하는 가장 긴 부분 집합의 길이를 반환하는 프로그램을 작성하라. 어떤 부분 집합에서 임의의 두 정수를 선택했을 때, 두 정수 사이의 모든 정수가 해당 부분 집합에 존재해야 한다. 예를 들어 <3, -2, 7, 9, 8, 1, 2, 0, -1, 5, 8>이 입력으로 주어지면, 이 조건을 만족하는 가장 긴 부분 집합은 {-2, -1, 0, 1, 2, 3}이므로 6을 반환한다.
+
+> 힌트: 입력을 꼭 정렬할 필요가 있을까?
+
+무식한 방법을 먼저 생각해 보자. 배열을 정렬한 뒤에 하나씩 차례대로 순회하면서 조건에 맞는지 확인한 후 가장 긴 부분 집합의 길이를 구하면 된다.
+
+그런데 한번 더 생각해 보면 배열을 꼭 정렬할 필요가 없다는 걸 알 수있다. 여기서는 인접한 원소가 얼마나 존재하는지를 알고 싶은 것이므로 전체를 정렬하지 않아도 된다. 정렬하는 대신 해시 테이블에 필요한 정보를 저장하면 된다. 배열의 원소를 순회하면서, 원소 e가 해시 테이블에 존재한다면 e+1, e+2, ...와 e-1, e-2,...를 해시 테이블에서 차례대로 탐색한 뒤 e를 포함하는 가장 긴 구간을 구한다. 연산의 중복을 피하기 위해 이 작업이 끝난 뒤에 해당 구간에 속한 원소들은 해시 테이블에서 삭제한다. 이들이 속한 가장 긴 구간을 이미 구했기 때문이다.
+
+구체적인 예제를 통해 이 문제를 살펴보자. A = <10,5,3,11,6,100,4>가 있다. 해시 테이블을 {6,10,3,11,5,100,4}로 초기화하자. A의 첫 번째 원소가 10이므로 10의 양쪽 정수를 해시 테이블에서 하나씩 살펴보면서 10을 포함하는 가장 긴 구간을 구한다. 10을 포함하는 가장 긴 집합은 {10, 11}이므로 길이는 2가 된다. 이들을 삭제하면 해시 테이블은 {6,3,5,100,4}가 된다. 그 다음 A의 원소는 5이다. 5는 해시 테이블에 존재하므로 5가 포함된 가장 긴 구간은 아직 구하지 않았다는 뜻이 된다. 5와 인접한 정수 3,4,6은 해시 테이블에 존재하지만, 2와 7은 존재하지 않는다. 따라서 5가 포함된 가장 긴 집합은 {3,4,5,6}이 되고 길이는 4가 된다. 이제 해시 테이블은 {100}이 된다. A 배열에는 5 뒤에 세 개의 정수 3,11,6가 있지만, 이들은 해시 테이블에 존재하지 않으므로 건너뛴다. 100을 포함하는 가장 긴 집합은 {100}이다. 해시 테이블을 {}로 갱신한다. A 배열의 원소 4는 해시 테이블이 존재하지 않으므로 건너뛴다. 따라서 가장 긴 집합은 {3,4,5,6}이고, 길이는 4이다.
+
+```java
+public static int longestContainedRange(List<Integer> A) {
+    // unprocessedEntries는 A에 존재하는 원소들을 기록한다.
+    Set<Integer> unprocessedEntries = new HashSet<>(A);
+
+    int maxIntervalSize = 0;
+    while (!unprocessedEntries.isEmpty()) {
+        int a = unprocessedEntries.iterator().next();
+        unprocessedEntries.remove(a);
+
+        // a를 포함하는 가장 긴 구간의 하한을 찾는다.
+        int lowerBound = a - 1;
+        while (unprocessedEntries.contains(lowerBound)) {
+            unprocessedEntries.remove(lowerBound);
+            --lowerBound;
+        }
+
+        // a를 포함하는 가장 긴 구간의 상한을 찾는다.
+        int upperBound = a + 1;
+        while (unprocessedEntries.contains(upperBound)) {
+            unprocessedEntries.remove(upperBound);
+            ++upperBound;
+        }
+
+        maxIntervalSize = Math.max(maxIntervalSize, upperBound - lowerBound - 1);
+    }
+    return maxIntervalSize;
+}
+```
+
+배열의 길이가 n일 때 이 방법의 시간 복잡도는 $O(n)$이 된다. 왜냐하면 배열의 원소를 많아야 한 번, 해시 테이블에서 추가하거나 삭제하기 때문이다.
