add java epi 12.11

--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -696,3 +696,65 @@ private static void increment(String word, Map<String, Integer> dict) {
 시간 복잡도는 다음과 같이 분석할 수 있다. 단어의 개수를 m, 각 단어의 길이를 n, 문장의 길이를 N이라고 하자. 어떤 인덱스 i에서 시작하고 길이가 nm인 부분 문자열이, 모든 단어를 이어 붙인 문자열과 같은지 확인하는 작업은 $O(nm)$ 시간 복잡도가 걸린다. 단어 집합을 저장할 때 해시 테이블을 사용한다면 전체 시간 복잡도는 $O(Nnm)$이 된다. 실무에서는 문자열을 비교할 때, 같지 않은 순간 곧바로 멈출 수 있으므로 대개 이보다는 훨씬 빠르다.
 
 모든 단어의 길이가 같다고 가정하기 때문에 시간 복잡도나 구현 측면에서 문제 자체는 쉽다. 모든 단어의 길이가 같기 때문에 부분 문자열과 모든 단어를 이어 붙인 문자열이 같은지도 쉽게 확인할 수 있다.
+
+## 문제 12.11 콜라츠 추측 테스트
+
+콜라츠 추측이란 다음과 같다. 임의의 자연수를 선택한다. 이 숫자가 홀수이면 세 배를 한 뒤 1을 더한다. 짝수라면 절반으로 나눈다. 이 과정을 계속해서 반복하다 보면, 어떤 숫자에서 시작했든지 결국엔 1에 도달한다.
+
+11을 예로 들면 숫자는 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1이 된다. 많은 노력이 있었지만 콜라츠 추측은 아직까지 옳다는 게 증명되지도, 반례가 발견되지도 않았다.
+
+첫 10억 개의 숫자에 대해서 콜라츠 추측을 해야 한다고 가정해 보자. 단순한 방법은 테스트할 집합에 있는 모든 숫자에 대해서 해당 규칙을 적용해 보는 것이다.
+
+첫 n개의 자연수에 대해 콜라츠 추측을 테스트하라.
+
+> 힌트: m < n의 조건을 만족하는 두 수가 있고 m에 대해서는 이미 콜라츠 추측을 증명했다. 이렇게 하면 숫자 n에 대한 콜라츠 추측을 효과적으로 할 수 있을까?
+
+면접에서는 정답이 없는 문제를 내는 경우가 많다. 이럴 때는 좋은 휴리스틱을 보여 주고 코딩을 잘하면 된다.
+
+콜라츠 추측은 두 가지 방식으로 실패할 수 있다. 수열이 이전 값으로 되돌아가서 무한 루프에 빠지든지, 무한대로 발산하든지 하는 경우다. 무한대로 발산하는 경우는 고정된 정수 길이로 테스트할 수 없기 때문에 오버플로 플래그를 사용하면 된다.
+
+모든 숫자에 대해서 콜라츠 추측의 룰을 반복적으로 적용하고 1로 수렴하는지 확인하는 방식으로 구현하면 된다. 좀 더 빠르게 확인할 수 있는 몇 가지 아이디어가 있는데, 다음과 같다.
+
+- 콜라츠 추측을 통해 이미 1로 산출된 숫자를 저장해 놓고 재사용한다. 이렇게 하면, 저장된 숫자에 도달하는 순간 결국 1에 도달할 거라고 예상할 수 있다.
+- 시간을 절약하기 위해 짝수는 건너뛴다. (짝수는 곧바로 절반을 나누어야 하는데, 절반으로 나눈 값은 이미 확인한 숫자이기 때문이다.)
+- k까지의 숫자를 모두 테스트했다면, k보다 작거나 같은 숫자에 도달하는 순간 멈춘다. k 이하의 숫자는 해시 테이블에 저장할 필요가 없다.
+- 곱셈과 나눗셈이 느리다면 비트 시프트와 덧셈을 사용한다.
+- 탐색해야 할 집합을 나누고 여러 컴퓨터를 사용해서 병렬로 처리한다. 문제 19.9의 해법을 참고하라.
+
+수열 내의 숫자가 32비트를 넘어갈 수 있으므로 64비트 숫자를 사용하고 오버플로에 대비하라. 임의의 정밀도 정수(arbitrary precision integer)를 사용할 수도 있다.
+
+```java
+public static boolean testCollatzConjecture(int n) {
+    // 1로 수렴한다고 이미 확인된 홀수를 저장한다.
+    Set<Long> verifiedNumbers = new HashSet<>();
+
+    // 1과 2는 간단하게 증명이 되므로 3부터 시작한다.
+    for (int i = 3; i <= n; i += 2) {
+        Set<Long> sequence = new HashSet<>();
+        long testI = i;
+        while (testI >= i) {
+            if (!sequence.add(testI)) {
+                // 이미 testI에 도달한 적이 있으므로, 콜라츠 수열은 무한 루프에 빠질 것이다.
+                // 이는 콜라츠 추측에 대한 반례가 되므로 바로 false를 반환한다.
+                return false;
+            }
+
+            if ((testI % 2) != 0) { // 홀수
+                if (!verifiedNumbers.add(testI)) {
+                    break; // testI는 이미 1로 수렴한다는 사실이 증명되었다.
+                }
+                long nextTestI = 3 * testI + 1; // 3을 곱하고 1을 더한다.
+                if (nextTestI <= testI) {
+                    throw new ArithmeticException("Collatz sequence overflow for " + i);
+                }
+                testI = nextTestI;
+            } else {
+                test /= 2; // 짝수이므로 절반으로 나눈다.
+            }
+        }
+    }
+    return true;
+}
+```
+
+시간 복잡도를 정확하게 계산하기는 어렵지만 적어도 n에 비례한다는 사실은 알 수 있다.
