add java epi 12.12

--- a/java_epi/ch12/12.해시 테이블.md
+++ b/java_epi/ch12/12.해시 테이블.md
@@ -758,3 +758,30 @@ public static boolean testCollatzConjecture(int n) {
 ```
 
 시간 복잡도를 정확하게 계산하기는 어렵지만 적어도 n에 비례한다는 사실은 알 수 있다.
+
+## 문제 12.12 체스에서 해시 함수 구현하기
+
+체스 게임의 상태는 그림 12.2에서와 같이 어떤 말이 어떤 위치에 있는지에 따라서 정해진다. 각 위치는 비어 있을 수도 있고, 여섯 종류의 말 중 하나로 채워져 있을 수도 있다. 말은 검은색이거나 하얀색이다. 각 위치는 $\lceil\log{(1 + 6 * 2)}\rceil = 4$ 0비트로 표현할 수 있고(빈칸 + 말의 종류 6개 * 2진영), 전체 체스판은 64 * 4 = 256 비트로 표현할 수 있다. (실제로는 게임의 상태가 좀 더 복잡하다. 말이 움직일 수 있는 방향도 알아야 하고, 캐슬링(castling), 앙 파상(en passant) 등 체스만의 독특한 룰도 고려해야 하기 때문이다. 하지만 여기서는 문제를 단순히 하기 위해, 이런 규칙들은 제외한다.)
+
+컴퓨터는 체스 게임의 상태 집합을 저장할 수 있어야 한다. 특정 상태를 계산했는지, 이길 수 있는 상태인지 등을 알고 있어야 한다. 해시 함수를 사용하면 자연스럽게 저장 공간을 줄일 수 있다. 즉, 해시 함수를 통해 게임의 상태를 256비트로 나타내고 충돌은 무시한다. 해시 코드는 문자열을 통한 일반적인 해시 함수를 사용한다. 하지만 컴퓨터가 반복적으로 인접한 상태를 탐색할 것이므로 체스판의 점차적인 변화에 대해서 효율적으로 해시값을 계산할 수 있도록 해시 함수를 보완해야 한다.
+
+체스 게임의 상태를 저장하는 해시 함수를 설계하라. 상태, 해시 코드, 말의 움직임이 주어졌을 때, 갱신된 상태에 대한 해시 코드를 효율적으로 계산할 수 있어야 한다.
+
+> 힌트: XOR는 결합법칙, 교환법칙이 성립하고 계산 또한 빠르다. 또한  $\alpha \oplus \alpha = 0$이다.
+
+체스판을 길이가 64인 13진법의 수열이라고 생각해 보자. 각 자릿수는 체스판의 한 칸을 나타내고 0부터 63까지의 숫자가 된다. 각 칸은 빈칸, 흰색 졸(pawn), 흰색 룩(rook), ..., 흰색 왕, 검은색 졸(pawn), ..., 검은색 왕(13가지 상태) 중 하나의 상태가 된다. 해시 함수의 수식은 $\sum_{k=1}^{63}c_ip^i$이다. 여기서 $c_i$는 i번째 위치의 자릿수이고, p는 소수이다. (자세한 내용은 12장의 앞 부분을 참조하길 바란다.)
+
+이 해시 함수는 상태의 변화에 따라 해시 코드를 점차적으로 갱신할 수 있다. 예를 들어 흰색 비숍이 검은색 기사를 잡았다면 기존의 해시 코드에서 기사와 비숍이 위치했던 자릿수의 값을 빼고, 비숍이 있떤 자리에는 빈칸을 넣고 기사가 있던 자리에는 비숍을 넣어서 해당 값을 해시 코드에 더해 준다.
+
+해시 값을 좀 더 빠르게 갱신할 수 있는 해시 함수가 더 있다. 각 64개의 칸에 위치할 수 있는 13개의 상태를 표현하는 64비트 숫자 코드를 임의로 만든다. 이렇게 임의로 생성한 숫자 832개(13 * 64)는 이 프로그램에서 상수값으로 존재한다. 전체 체스판을 나타내는 해시 코드는 각 위치의 코드값을 XOR한 결과와 같다. 갱신은 굉장히 빠르다. 앞의 예제에서는 $i_1$ 위치에 있는 검은색 기사, $i_2$ 위치에 있는 흰색 비숍, $i_1$ 위치에 있는 흰색 비숍, $i_2$ 위치에 있는 빈칸에 해당하는 코드값을 모두 XOR하면 된다.
+
+두 번째 함수가 첫 번째 함수보다 빠른 이유는 다음과 같다. 첫 번째 해시 함수에서는 XOR보다 연산 비용이 큰 $p^i$와 같은 값을 계산한다. 하지만 두 번째 해시 함수는 상대방 말을 잡거나 캐슬링 같은 경우에 최대 4번의 XOR 연산을 통해 해시 코드를 갱신할 수 있다.
+
+예를 들어 두 개의 말 P와 Q가 있는 2 * 2 체스판을 생각해 보자. 최대 하나의 말이 한 칸에 놓일 수 있다. 각 체스판의 칸을 (0, 0), (0, 1), (1, 0), (1, 1)이라고 하자. 각 위치를 다음과 같은 임의의 7비트로 표시한다.
+
+- (0, 0): $(1100111)_2$는 빈칸, $(1011000)_2$는 P, $(1100010)_2$는 Q
+- (0, 1): $(1111100)_2$는 빈칸, $(1000001)_2$는 P, $(0001111)_2$는 Q
+- (1, 0): $(1100101)_2$는 빈칸, $(1101101)_2$는 P, $(0011101)_2$는 Q
+- (1, 1): $(0100001)_2$는 빈칸, $(0101100)_2$는 P, $(1001011)_2$는 Q
+
+다음과 같은 상태를 생각해 보자. P는 (0, 0)에, Q는 (1, 1)에 있고 나머지 칸은 비어 있다. 이 상태에 대한 해시 코드는 $(1011000)_2 \oplus (1111100)_2 \oplus (1100101)_2 \oplus (1001011)_2 = (0001010)_2$이 된다. Q가 (0, 1)로 움직였다면 (1, 1)에서 $(1001011)_2)$ (Q를 (1, 1)에서 삭제), $(0100001)_2$ ((1, 1)에 빈칸 삽입), $(1111100)_2$((0, 1)에서 빈칸 삭제), $(0001111)_2$ ((0, 1)에 Q 삽입)을 모두 XOR한다. 체스판의 크기와 말의 개수에 관계없이 이 방법은 상태를 갱신하기 위해 4번의 XOR만 사용한다.
