add java epi 13.2

--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -131,3 +131,41 @@ public static List<Integer> intersectTwoSortedArray(List<Integer> A, List<Intege
 ```
 
 입력 배열의 각 원소마다 $O(1)$의 시간을 사용했으므로 전체 알고리즘의 시간 복잡도는 $O(m + n)$이 된다.
+
+## 13.2 정렬된 두 배열 합치기
+
+정수값이 정렬된 두 배열이 있다. 그중 하나의 배열은 배열 뒤에 충분히 많은 공간이 있어서 두 배열을 정렬된 순서로 합쳐서 저장하는 데 사용할 수 있었다. 예를 들어 <5,13,17,_,_,_,_,_>과 <3,7,11,19>가 있다고 하자(여기서 '_'는 빈칸을 뜻한다). 이 두 배열을 하나로 합쳐 첫 번째 배열에 정렬된 순서로 나열한다면 첫 번째 배열은 <3,5,7,11,13,17,19,_>이 될 것이다.
+
+정렬된 정수 배열 두 개가 주어졌을 때, 두 배열을 정렬된 순서로 합친 뒤 그 결과를 첫 번째 배열에 넣는 프로그램을 작성하라. 첫 번째 배열의 끝에는 두 번째 배열을 모두 넣을 수 있을 만큼 충분한 빈칸이 있다고 가정해도 좋다.
+
+> 힌트: 배열의 원소를 반복해서 옮기지 말기 바란다.
+
+이 문제에서는 첫 번째 배열에 결괏값을 쓰는 부분이 까다롭다. 만약 결과를 담을 세 번째 배열이 존재한다면, 두 배열을 앞에서부터 동시에 순회하면서 더 작은 값을 결과 배열에 작성해 주면 된다. 첫 번째 배열과 두 번째 배열의 길이가 각각 m과 n일 때 이 방법의 시간 복잡도는 $O(m + n)$이 된다.
+
+첫 번째 배열에 결과를 저장한다면, 이 방법으로는 $O(m + n)$ 시간에 풀 수 없다. 왜냐하면 두 번째 배열의 값이 첫 번째 배열의 값보다 작을 때, 첫 번째 배열의 모든 값을 오른쪽으로 한 칸씩 옮겨줘야 하기 때문이다. 최악의 경우에는 두 번째 배열의 값이 전부 첫 번째 배열보다 작은 경우인데, 이때의 시간 복잡도는 $O(mn)$이 된다.
+
+하지만 배열의 뒤쪽은 비어 있다. 따라서 첫 번째 배열의 끝에서부터 값을 채워 나가도 된다. 마지막 원소는 m + n - 1번째 인덱스에 쓰여질 것이다. 예를 들어 A = <5,13,17,_,_,_,_,_>이고 B = <3,7,11,19>라면 A를 다음과 같은 방법으로 갱신할 수 있다.
+
+<5,13,17,_,_,_,19,_>
+<5,13,17,_,_,17,19,_>
+<5,13,17,_,13,17,19,_>
+<5,13,17,11,13,17,19,_>
+<5,13,7,11,13,17,19,_>
+<5,5,7,11,13,17,19,_>
+<3,5,7,11,13,17,19,_>
+
+뒤에서부터 처리한다면 아직 처리하지 않은 원소 위에 덮어쓰는 일은 절대 없다. 두 번째 배열의 값이 전부 첫 번째 배열의 값보다 크다고 하더라도 두 번째 배열의 값이 위치할 인덱스는 m에서 m + n + - 1까지고, 이 인덱스는 첫 번째 배열의 원소와 겹치지 않는다. 다음은 이를 작성한 프로그램이다. 문제 6.4의 해볍도 이와 비슷하게 값을 뒤에서부터 채워 넣었다.
+
+```java
+public static void mergeTwoSortedArrays(List<Integer> A, int m, List<Integer> B, int n) {
+    int a = m - 1, b = n - 1, writeIdx = m + n - 1;
+    while (a >= 0 && b >= 0) {
+        A.set(writeIdx--, A.get(a) > B.get(b) ? A.get(a--) : B.get(b--));
+    }
+    while (b >= 0) {
+        A.set(writeIdx--, B.get(b--));
+    }
+}
+```
+
+시간 복잡도는 $O(m + n)$이다. 추가로 사용한 공간은 $O(1)$이다.
