add java epi 13.7

--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -402,3 +402,108 @@ public static List<Interval> addInterval(List<Interval> disjointIntervals, Inter
 ```
 
 각 구간을 처리하는 데 $O(1)$ 시간을 사용하므로 전체 시간 복잡도는 $O(n)$이다.
+
+## 문제 13.7 구간의 합 구하기
+
+끝점이 정수값으로 주어진 구간의 집합을 생각해 보자. 구간의 끝은 열린 구간일 수도 있고 닫힌 구간일 수도 있다. 이런 구간의 집합을 하나로 합치려고 한다. 좀 더 자세한 예제는 그림 13.2에서 확인할 수 있다.
+
+구간의 집합이 입력으로 주어졌을 때, 이들을 합친 결과를 서로 중복되지 않는 구간 집합으로 출력하는 알고리즘을 설계하라.
+
+> 힌트: 케이스 분석을 해 보라.
+
+문제 13.6의 해법에서 언급했던 무식한 방법을 여기에도 적용해 볼 수 있다. 즉, 가장 왼쪽 점과 가장 오른쪽 점 사이의 모든 숫자를 확인해 보면 된다. 이전과 마찬가지로 이 방법의 시간 복잡도는 $O(Dn)$이다. 여기서 D는 가장 왼쪽에 위치한 점과 가장 오른쪽에 위치한 점의 차이와 같고 n은 구간의 개수와 같다. D는 받아들이기 힘들 정도로 엄청 클 수도 있다.
+
+이 문제에서도 구간 사이의 모든 값보다는 구간 자체에 초점을 맞추면 시간 복잡도를 개선할 수 있다. 우리는 다음 과정을 반복할 것이다. 임의의 구간을 선택한 뒤 이 구간과 겹치는 모든 구간을 찾는다. 만약 어떤 구간과도 겹치지 않는다면 이 구간을 입력 집합에서 삭제하고 결과 집합에 추가한다. 만약 겹치는 구간이 존재한다면, 이들을 모두 합한 뒤 겹쳤던 모든 구간을 입력 집합에서 삭제하고 결과 집합에 합한 하나의 구간을 추가한다. 이때 합한 결과는 반드시 하나의 구간이어야 한다. 매번 적어도 하나의 구간을 삭제하고, 각 구간과 겹치는 구간을 찾고 합체는 데 $O(n)$의 시간이 걸리므로 전체 시간 복잡도는 $O(n^2)$이 된다.
+
+이 방법을 좀 더 빠르게 하고 싶다면, 구간을 정렬한 뒤 차례대로 처리해 나가면 된다. 그럼 우리가 처리해야 할 구간의 부분 집합에 더 집중할 수 있다. 예를 들어, 구간 집합을 왼쪽 점을 기준으로 정렬하면, 현재 구간보다 왼쪽에 있는 구간은 다시 방문할 필요가 없어진다.
+
+왼쪽이 열린 구간이라면 그 점은 구간에 포함되지 않는다. 왼쪽 닫힌 구간, 오른쪽 열린 구간, 오른쪽 닫힌 구간도 마찬가지다. 정렬을 할 때, 두 구간의 왼쪽 점이 같다면, 닫힌 구간의 왼쪽 점을 먼저 두도록 한다.
+
+정렬된 구간 배열을 순회하면서 다음과 같이 처리한다.
+
+- 가장 최근에 결과 배열로 추가된 구간이 현재 구간과 겹치지 않으며, 결과 배열에 들어 있는 구간의 오른쪽 끝점과 현재 구간의 왼쪽 끝점이 겹치지 않는다. 이 경우에는 단순히 현재 구간을 결과 배열에 추가하면 된다.
+- 가장 최근에 결과 배열로 추가된 구간이 현재 구간과 겹친다. 이 경우에는 최근에 추가한 구간과 현재 구간을 합쳐 준다.
+- 가장 최근에 결과 배열로 추가된 구간의 오른쪽 끝점과 현재 구간의 왼쪽 끝점이 같고, 그중 하나 혹은 둘 다 닫힌 구간이다. 이 경우에도 역시 최근에 추가한 구간과 현재 구간을 합쳐준다.
+
+예를 들어 그림 13.2의 결과 배열은 다음과 같이 갱신된다.
+<(0,3)>
+<(0,4]>
+<(0,4],[5,7)>
+<(0,4],[5,8)>
+<(0,4],[5,11)>
+<(0,4],[5,11]>
+<(0,4],[5,11],[12,14]>
+<(0,4],[5,11],[12,16]>
+<(0,4],[5,11],[12,17)>
+
+```java
+public static class Interval implements Comparable<Interval> {
+    public Endpoint left = new Endpoint();
+    public Endpoint right = new Endpoint();
+
+    private static class Endpoint {
+        public boolean isClosed;
+        public int val;
+    }
+
+    @Override
+    public int compareTo(Interval i) {
+        if (Integer.compare(left.val, i.left.val) != 0) {
+            return left.val - i.left.val;
+        }
+        // 왼쪽 끝점이 같으면서 하나는 닫힌 구간이고 다른 하나는 열린 구간일 경우에는,
+        // 닫힌 구간이 먼저 등장해야 한다.
+        if (left.isClosed && !i.left.isClosed) {
+            return -1;
+        }
+        return (!left.isClosed && i.left.isClosed) ? 1 : 0;
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (obj == null || !(obj instanceof Interval)) {
+            return false;
+        }
+        if (this == obj) {
+            return true;
+        }
+        Interval that = (Interval) obj;
+        return left.val == that.val && left.isClosed == that.left.isClosed;
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(left.val, left.isClosed);
+    }
+
+    public static List<Interval> unionOfIntervals(List<Interval> intervals) {
+        // 구간 집합이 비어 있는 경우
+        if (intervals.isEmpty()) {
+            return Collections.EMPTY_LIST;
+        }
+
+        // 왼쪽 끝점을 기준으로 구간을 정렬한다.
+        Collections.sort(intervals);
+        List<Interval> result = new ArrayList<>(Arrays.asList(intervals.get(0)));
+        for (Interval i : intervals) {
+            if (!result.isEmpty()
+                && (i.left.val < result.get(result.size() - 1).right.val
+                    || (i.left.val == result.get(result.size() - 1).right.val
+                        && (i.left.isClosed || result.get(result.size() - 1).right.isClosed))))
+            {
+                if (i.right.val > result.get(result.size() - 1).right.val
+                    || (i.right.val == result.get(result.size() - 1).right.val
+                        && i.right.isClosed))
+                {
+                    result.get(result.size() - 1).right = i.right;
+                }
+            } else {
+                result.add(i);
+            }
+        }
+        return result;
+    }
+}
+```
+
+시간 복잡도는 정렬에 필요한 $O(n \log n)$이다.
