add java epi 13.9

--- a/java_epi/ch13/13.정렬.md
+++ b/java_epi/ch13/13.정렬.md
@@ -132,7 +132,7 @@ public static List<Integer> intersectTwoSortedArray(List<Integer> A, List<Intege
 
 입력 배열의 각 원소마다 $O(1)$의 시간을 사용했으므로 전체 알고리즘의 시간 복잡도는 $O(m + n)$이 된다.
 
-## 13.2 정렬된 두 배열 합치기
+## 문제 13.2 정렬된 두 배열 합치기
 
 정수값이 정렬된 두 배열이 있다. 그중 하나의 배열은 배열 뒤에 충분히 많은 공간이 있어서 두 배열을 정렬된 순서로 합쳐서 저장하는 데 사용할 수 있었다. 예를 들어 <5,13,17,_,_,_,_,_>과 <3,7,11,19>가 있다고 하자(여기서 '_'는 빈칸을 뜻한다). 이 두 배열을 하나로 합쳐 첫 번째 배열에 정렬된 순서로 나열한다면 첫 번째 배열은 <3,5,7,11,13,17,19,_>이 될 것이다.
 
@@ -577,3 +577,63 @@ public static void groupByAge(List<Person> people) {
 처음에 해시테이블의 n번의 삽입 연산을 수행하고, 두 번째에 한 원소를 올바른 위치로 옮기는 데 $O(1)$의 연산을 수행하였으므로 전체 시간 복잡도는 $O(n)$이 된다. 서로 다른 나이가 m개일 때 추가 공간 복잡도는 해시 테이블을 사용하는 데 필요한 $O(n)$이 된다.
 
 만약 나이를 정렬된 순서로 배치하고 싶다면, 14장에서 소개할 이진 탐색 트리 방식의 맵을 사용하면 된다. 이진 탐색 트리 방식의 맵은 나이를 정렬된 순서대로 저장한다. 예를 들어, 나이-학생수의 쌍을 이진 탐색 트리 방식의 맵에 저장하면 그 순서는 (11, 1), (12, 2), (13, 3), (14, 2)가 된다. 시간 복잡도는 $O(n + m \log m)$이 된다. 왜냐하면 이진 탐색 트리에서 삽입 연산은 $O(\log m)$이 소요되기 때문이다. 이런 방색의 정렬을 계수정렬(counting sort)이라 한다.
+
+## 문제 13.9 팀 사진 찍는 날 - 1
+
+어떤 팀과 그 팀의 상대팀을 쌍으로 함께 사진을 찍으려고 한다. 양팀의 팀원 수는 동일하다. 팀 사진은 앞줄과 뒷줄에 선수들을 배치시킨 뒤 사진을 찍는다. 그림 13.3에 나와 있듯이 뒷줄의 선수는 반드시 앞의 선수보다 키가 커야 한다. 한줄의 선수들은 모두 같은 팀이어야 한다.
+
+두 팀의 키 정보가 입력으로 주어졌을 때, 이 같은 방식으로 선수들을 배치시킬 수 있는지 확인하라.
+
+> 힌트: 구체적인 입력값으로 몇 번 테스트 해 보고 일반적인 결론을 내린다.
+
+무식한 방법은 하나의 배열의 순열을 모두 생성한 뒤에 다른 배열의 원소와 하나씩 비교해보는 것이다. 각 팀에 n명의 선수가 있을 때, 이 방법은 한 팀의 순열을 모두 생성하는 데 $O(n!)$ 시간이 걸리고 다른 팀과 키를 비교하는 데 $O(n)$의 시간이 걸리므로 전체 시간 복잡도는 $O(n! \times n)$이 된다. 너무 오래 걸린다.
+
+직관적으로 가장 배치시키기 어려운 선수에 초점을 맞춰서 탐색 범위를 줄여 나가 보자. A팀이 B팀 뒤에 서야 한다고 가정해 보자. A팀에서 가장 큰 선수가 B팀에서 가장 큰 선수보다 키가 크지 않다면 A팀을 B팀 뒤에 세울 수 없다. 반대로 A팀의 가장 큰 선수가 B팀에서 가장 큰 선수보다 크다면, A팀의 이 선수를 B팀에서 키가 가장 큰 선수 뒤에 세울 수 있다. 같은 논리를 다른 선수들에도 적용할 수 있다. 즉, A팀에서 두 번째로 키가 큰 선수는 B에서 두 번째로 키가 큰 선수와 비교하면 된다.
+
+이를 효율적으로 비교하기 위해선 키를 기준으로 A팀과 B팀의 선수를 정렬하면 된다. 그림 13.4는 키를 기준으로 그림 13.3의 선수를 정렬한 결과이다.
+
+다음은 이 방법을 사용해서 어떤 팀을 상대 팀의 앞에 세울 수 있는지 확인하는 프로그램이다.
+
+```java
+class Team {
+    private List<Player> players;
+
+    private static class Player implements Comparable<Player> {
+        public Integer height;
+
+        public Player(Integer h) { height = h; }
+
+        @Override
+        public int compareTo(Player that) {
+            return Integer.compare(height, that.height);
+        }
+    }
+
+    public Team(List<Integer> height) {
+        players = new ArrayList<Player>(height.size());
+        for (int i = 0; i < height.size; i++) {
+            players.add(new Player(height.get(i)));
+        }
+    }
+
+    // A팀을 B팀의 앞에 줄세울 수 있는지 확인한다.
+    public static boolean validPlacementExists(Team A, Team B) {
+        List<Player> ASorted = A.sortPlayersByHeight();
+        List<Player> BSorted = B.sortPlayersByHeight();
+        for (int i = 0; i < ASorted.size() && i < BSorted.size(); i++) {
+            if (ASortd.get(i).compareTo(BSorted.get(i)) >= 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private List<Player> sortPlayersByHeight() {
+        List<Player> sortedPlayers = new ArrayList<>(players);
+        Collections.sort(sortedPlayers);
+        return sortedPlayers;
+    }
+}
+```
+
+시간 복잡도는 정렬에 필요한 $O(n \log n)$이다.
